博客翻修以适应2.x版本代码

--- a/docs/part2/20.md
+++ b/docs/part2/20.md
@@ -1,13 +1,15 @@
 # 前言
 
+> **注意：这一章对应项目代码2.x.x版本，持有低版本项目代码的同学请到Github更新一份**
+
 这一章将了解如何在DirectX 11利用硬件实例化技术高效地绘制重复的物体，以及使用视锥体裁剪技术提前将位于视锥体外的物体进行排除。
 
 在此之前需要额外了解的章节如下：
 
-| 章节回顾                                                     |
-| ------------------------------------------------------------ |
-| [18 使用DirectXCollision库进行碰撞检测](part2/18.md)         |
-| [19 模型加载：obj格式的读取及使用二进制文件提升读取效率](part2/19.md) |
+| 章节回顾                                             |
+| ---------------------------------------------------- |
+| [18 使用DirectXCollision库进行碰撞检测](part2/18.md) |
+| [19 模型加载：Assimp库](part2/19.md)                 |
 
 # 硬件实例化(Hardware Instancing)
 
@@ -16,70 +18,6 @@
 要能够实现上面的这种操作，还需要图形库底层API本身能够支持按对象绘制。对于每个对象，我们必须设置它们各自的材质、世界矩阵等，然后才是调用绘制命令。尽管在Direct3D 10和后续的版本已经将原本Direct3D 9的一些API重新设计以尽可能最小化性能上的开销，部分多余的开销仍然存在。因此，Direct3D提供了一种机制，不需要通过API上的额外性能开销来实现实例化，我们称之为硬件实例化。
 
 为什么要担忧API性能开销呢？Direct3D 9应用程序通常因为API导致在CPU上遇到瓶颈，而不是在GPU。以前关卡设计师喜欢使用单一材质和纹理来绘制许多对象，因为对于它们来说需要经常去单独改变它的状态并且去调用绘制。场景将会被限制在几千次的调用绘制以维持实时渲染的速度，主要在于这里的每次API调用都会引起高级别的CPU性能开销。现在图形引擎可以使用批处理技术以最小化绘制调用的次数。硬件实例化是API帮助执行批处理的一个方面。
-
-# 多顶点缓冲区输入
-
-之前我们提到，在输入装配阶段中提供了16个输入槽，这意味着可以同时绑定16个顶点缓冲区作为输入。那这时候如果我们使用多个顶点缓冲区作为输入会产生什么样的结果呢？
-
-## 顶点按数据类型拆分成多个顶点缓冲区
-
-这里做一个铺垫，以前我们在输入装配阶段只使用了1个输入槽。现在假定我们有如下顶点缓冲区结构：
-
-| 索引 | 顶点位置 | 顶点法向量 | 顶点颜色 |
-| ---- | -------- | ---------- | -------- |
-| 0    | P1       | N1         | 红       |
-| 1    | P2       | N2         | 绿       |
-| 2    | P3       | N3         | 蓝       |
-
-这里我们也可以使用2个输入槽，第一个顶点缓冲区存放顶点位置，第二个顶点缓冲区存放顶点法向量和顶点颜色：
-
-| 索引 | 顶点位置 |
-| ---- | -------- |
-| 0    | P1       |
-| 1    | P2       |
-| 2    | P3       |
-
-| 索引 | 顶点法向量 | 顶点颜色 |
-| ---- | ---------- | -------- |
-| 0    | N1         | 红       |
-| 1    | N2         | 绿       |
-| 2    | N3         | 蓝       |
-
-先回顾一下顶点输入布局描述的结构：
-
-```cpp
- typedef struct D3D11_INPUT_ELEMENT_DESC
- {
-    LPCSTR SemanticName;    // 语义名
-    UINT SemanticIndex;     // 语义名对应的索引值
-    DXGI_FORMAT Format;     // DXGI数据格式
-    UINT InputSlot;         // 输入槽
-    UINT AlignedByteOffset; // 对齐的字节偏移量
-    D3D11_INPUT_CLASSIFICATION InputSlotClass;  // 输入槽类别(此时为顶点)
-    UINT InstanceDataStepRate;  // 忽略(0)
- } 	D3D11_INPUT_ELEMENT_DESC;
-```
-
-然后我们就可以在输入布局中这样指定（这里先简单提及一下）：
-
-| 语义     | 语义索引 | 数据格式           | 输入槽 | 该输入槽对应的字节偏移 |
-| -------- | -------- | ------------------ | ------ | ---------------------- |
-| POSITION | 0        | R32G32B32_FLOAT    | 0      | 0                      |
-| NORMAL   | 0        | R32G32B32_FLOAT    | 1      | 0                      |
-| COLOR    | 0        | R32G32B32A32_FLOAT | 1      | 12                     |
-
-这样，下面在HLSL的结构体数据实际上来源于两个输入槽：
-
-```hlsl
-struct VertexPosNormalColor
-{
-	float3 pos : POSITION;		// 来自输入槽0
-	float3 normal : NORMAL;		// 来自输入槽1
-	float4 color : COLOR;		// 来自输入槽1
-};
-```
-
-然后，输入装配器就会根据输入布局，以及索引值来抽取对应数据，最终构造出来的顶点数据流和一开始给出的表格数据是一致的。即便你把第二个顶点缓冲区再按顶点法向量和顶点颜色拆分成两个新的顶点缓冲区，使用三输入槽产生的结果也是一致的。如果你只能拿到连续的顶点位置数据、连续的法向量数据、连续的纹理坐标数据话，可以考虑使用上述方案。
 
 ## 顶点与实例数据的组合 与 流式实例化数据
 
@@ -313,98 +251,33 @@ deviceContext->Unmap(m_pInstancedBuffer.Get(), 0);
 
 查看上图，可以知道的是物体A和D没有与视锥体发生碰撞，因此需要排除掉物体A的实例数据。而物体B和E与视锥体有相交，物体C则被视锥体所包含，这三个物体的实例数据都应当传递给实例缓冲区。
 
-视锥体裁剪有三种等价的代码表现形式。需要已知当前物体的包围盒、世界变换矩阵、观察矩阵和投影矩阵。其中投影矩阵本身可以构造出视锥体包围盒。
-
-下面有关视锥体裁剪的方法都放进了`Collision.h`中。
-
-## 方法1
-
-现在已知物体的包围盒位于自身的局部坐标系，我们可以使用世界变换矩阵将其变换到世界空间中。同样，由投影矩阵构造出来的视锥体包围盒也位于自身局部坐标系中，而观察矩阵实质上是从世界矩阵变换到视锥体所处的局部坐标系中。因此，我们可以使用观察矩阵的逆矩阵，将视锥体包围盒也变换到世界空间中。这样就好似物体与视锥体都位于世界空间中，可以进行碰撞检测了：
+已知当前物体的包围盒、物体的世界变换矩阵、摄像机的观察矩阵和投影矩阵。其中投影矩阵本身可以构造出视锥碰撞体。我们可以使用世界变换矩阵将物体的包围盒变换到世界空间中，然后通过观察矩阵变换到观察空间中。这样我们就可以在观察空间中进行包围盒与视锥体的碰撞检测了：
 
 ```cpp
-std::vector<Transform> XM_CALLCONV Collision::FrustumCulling(
-	const std::vector<Transform>& transforms, const DirectX::BoundingBox& localBox, DirectX::FXMMATRIX View, DirectX::CXMMATRIX Proj)
+BoundingBox boundingBox = object.GetModel()->boundingbox;
+
+BoundingFrustum frustum;
+BoundingFrustum::CreateFromMatrix(frustum, m_pCamera->GetProjMatrixXM());
+
+XMMATRIX V = m_pCamera->GetViewMatrixXM();
+
+BoundingOrientedBox localOrientedBox, orientedBox;
+BoundingOrientedBox::CreateFromBoundingBox(localOrientedBox, boundingBox);
+
+size_t sz = instancedData.size();
+for (size_t i = 0; i < sz; ++i)
 {
-	std::vector<Transform> acceptedData;
+    // 将有向包围盒从局部坐标系变换到视锥体所在的局部坐标系(观察坐标系)中
+    localOrientedBox.Transform(orientedBox, objectTransforms[i].GetLocalToWorldMatrixXM() * V);
+    // 相交检测
+    if (frustum.Intersects(orientedBox))
+    {
+        m_AcceptedIndices.push_back(i);
+        m_AcceptedData.push_back(instancedData[i]);
+    }
 
-	BoundingFrustum frustum;
-	BoundingFrustum::CreateFromMatrix(frustum, Proj);
-
-	BoundingOrientedBox localOrientedBox, orientedBox;
-	BoundingOrientedBox::CreateFromBoundingBox(localOrientedBox, localBox);
-	for (auto& t : transforms)
-	{
-		XMMATRIX W = t.GetLocalToWorldMatrixXM();
-		// 将有向包围盒从局部坐标系变换到视锥体所在的局部坐标系(观察坐标系)中
-		localOrientedBox.Transform(orientedBox, W * View);
-		// 相交检测
-		if (frustum.Intersects(orientedBox))
-			acceptedData.push_back(t);
-	}
-
-	return acceptedData;
 }
 ```
-
-## 方法2
-
-该方法对应的正是龙书中所使用的裁剪方法，基本思路为：分别对观察矩阵和世界变换矩阵求逆，然后使用观察逆矩阵将视锥体从自身坐标系搬移到世界坐标系，再使用世界变换的逆矩阵将其从世界坐标系搬移到物体自身坐标系来与物体进行碰撞检测。改良龙书的碰撞检测代码如下：
-
-```cpp
-std::vector<Transform> XM_CALLCONV Collision::FrustumCulling2(
-	const std::vector<Transform>& transforms, const DirectX::BoundingBox& localBox, DirectX::FXMMATRIX View, DirectX::CXMMATRIX Proj)
-{
-	std::vector<Transform> acceptedData;
-
-	BoundingFrustum frustum, localFrustum;
-	BoundingFrustum::CreateFromMatrix(frustum, Proj);
-	XMMATRIX InvView = XMMatrixInverse(nullptr, View);
-	for (auto& t : transforms)
-	{
-		XMMATRIX W = t.GetLocalToWorldMatrixXM();
-		XMMATRIX InvWorld = XMMatrixInverse(nullptr, W);
-
-		// 将视锥体从观察坐标系(或局部坐标系)变换到物体所在的局部坐标系中
-		frustum.Transform(localFrustum, InvView * InvWorld);
-		// 相交检测
-		if (localFrustum.Intersects(localBox))
-			acceptedData.push_back(t);
-	}
-
-	return acceptedData;
-}
-```
-
-## 方法3
-
-这个方法理解起来也比较简单，先将物体从局部坐标系搬移到世界坐标系，然后再用观察矩阵将其搬移到视锥体自身的局部坐标系来与视锥体进行碰撞检测。代码如下：
-
-```cpp
-std::vector<Transform> XM_CALLCONV Collision::FrustumCulling3(
-	const std::vector<Transform>& transforms, const DirectX::BoundingBox& localBox, DirectX::FXMMATRIX View, DirectX::CXMMATRIX Proj)
-{
-	std::vector<Transform> acceptedData;
-
-	BoundingFrustum frustum;
-	BoundingFrustum::CreateFromMatrix(frustum, Proj);
-
-	BoundingOrientedBox localOrientedBox, orientedBox;
-	BoundingOrientedBox::CreateFromBoundingBox(localOrientedBox, localBox);
-	for (auto& t : transforms)
-	{
-		XMMATRIX W = t.GetLocalToWorldMatrixXM();
-		// 将有向包围盒从局部坐标系变换到视锥体所在的局部坐标系(观察坐标系)中
-		localOrientedBox.Transform(orientedBox, W * View);
-		// 相交检测
-		if (frustum.Intersects(orientedBox))
-			acceptedData.push_back(t);
-	}
-
-	return acceptedData;
-}
-```
-
-这三种方法的裁剪表现效果是一致的。
 
 # C++代码实现
 
@@ -415,120 +288,109 @@ std::vector<Transform> XM_CALLCONV Collision::FrustumCulling3(
 ![](..\assets\20\02.png)
 
 ```cpp
-void GameApp::CreateRandomTrees()
+// 初始化树
+Model* pModel = m_ModelManager.CreateFromFile("..\\Model\\tree.obj");
+m_Trees.SetModel(pModel);
+pModel->SetDebugObjectName("Trees");
+XMMATRIX S = XMMatrixScaling(0.015f, 0.015f, 0.015f);
+
+BoundingBox treeBox = m_Trees.GetModel()->boundingbox;
+
+// 让树木底部紧贴地面位于y = -2的平面
+treeBox.Transform(treeBox, S);
+float Ty = -(treeBox.Center.y - treeBox.Extents.y + 2.0f);
+// 随机生成256颗随机朝向的树
+m_TreeInstancedData.resize(256);
+m_TreeTransforms.resize(256);
+
+std::mt19937 rng;
+rng.seed(std::random_device()());
+std::uniform_real<float> radiusNormDist(0.0f, 30.0f);
+std::uniform_real<float> normDist;
+float theta = 0.0f;
+int pos = 0;
+Transform transform;
+transform.SetScale(0.015f, 0.015f, 0.015f);
+for (int i = 0; i < 16; ++i)
 {
-	srand((unsigned)time(nullptr));
-	// 初始化树
-	m_ObjReader.Read(L"Model\\tree.mbo", L"Model\\tree.obj");
-	m_Trees.SetModel(Model(m_pd3dDevice.Get(), m_ObjReader));
-	XMMATRIX S = XMMatrixScaling(0.015f, 0.015f, 0.015f);
-	
-	BoundingBox treeBox = m_Trees.GetLocalBoundingBox();
+    // 取5-125的半径放置随机的树
+    for (int j = 0; j < 4; ++j)
+    {
+        // 距离越远，树木越多
+        for (int k = 0; k < 2 * j + 1; ++k, ++pos)
+        {
+            float radius = (float)(radiusNormDist(rng) + 30 * j + 5);
+            float randomRad = normDist(rng) * XM_2PI / 16;
+            transform.SetRotation(0.0f, normDist(rng) * XM_2PI, 0.0f);
+            transform.SetPosition(radius * cosf(theta + randomRad), Ty, radius * sinf(theta + randomRad));
 
-	// 让树木底部紧贴地面位于y = -2的平面
-	treeBox.Transform(treeBox, S);
-	float Ty = -(treeBox.Center.y - treeBox.Extents.y + 2.0f);
-	// 随机生成256颗随机朝向的树
-	m_InstancedData.resize(256);
-	m_Trees.ResizeBuffer(m_pd3dDevice.Get(), 256);
+            m_TreeTransforms[pos] = transform;
 
-	float theta = 0.0f;
-	int pos = 0;
-	for (int i = 0; i < 16; ++i)
-	{
-		// 取5-125的半径放置随机的树
-		for (int j = 0; j < 4; ++j)
-		{
-			// 距离越远，树木越多
-			for (int k = 0; k < 2 * j + 1; ++k, ++pos)
-			{
-				float radius = (float)(rand() % 30 + 30 * j + 5);
-				float randomRad = rand() % 256 / 256.0f * XM_2PI / 16;
-				m_InstancedData[pos].SetScale(0.015f, 0.015f, 0.015f);
-				m_InstancedData[pos].SetRotation(0.0f, rand() % 256 / 256.0f * XM_2PI, 0.0f);
-				m_InstancedData[pos].SetPosition(radius * cosf(theta + randomRad), Ty, radius * sinf(theta + randomRad));
-			}
-		}
-		theta += XM_2PI / 16;
-	}
-
-	
+            XMMATRIX W = transform.GetLocalToWorldMatrixXM();
+            XMMATRIX WInvT = XMath::InverseTranspose(W);
+            XMStoreFloat4x4(&m_TreeInstancedData[pos].world, XMMatrixTranspose(W));
+            XMStoreFloat4x4(&m_TreeInstancedData[pos].worldInvTranspose, XMMatrixTranspose(WInvT));
+        }
+    }
+    theta += XM_2PI / 16;
 }
 ```
 
-## GameObject::ResizeBuffer方法--重新调整实例缓冲区的大小
+## 创建实例缓冲区并上传数据
 
-若实例缓冲区的大小容不下当前增长的实例数据，则需要销毁原来的实例缓冲区，并重新创建一个更大的，以确保刚好能容得下之前的大量实例数据。
+这里使用Buffer类创建动态顶点缓冲区，在经过视锥体裁剪后，将位于视锥体内的数据上传给该实例缓冲区。
+
+> **注意：矩阵数据需要预先转置！**
 
 ```cpp
-void GameObject::ResizeBuffer(ComPtr<ID3D11Device> device, size_t count)
-{
-	// 设置实例缓冲区描述
-	D3D11_BUFFER_DESC vbd;
-	ZeroMemory(&vbd, sizeof(vbd));
-	vbd.Usage = D3D11_USAGE_DYNAMIC;
-	vbd.ByteWidth = (UINT)count * sizeof(InstancedData);
-	vbd.BindFlags = D3D11_BIND_VERTEX_BUFFER;
-	vbd.CPUAccessFlags = D3D11_CPU_ACCESS_WRITE;
-	// 创建实例缓冲区
-	HR(device->CreateBuffer(&vbd, nullptr, m_pInstancedBuffer.ReleaseAndGetAddressOf()));
+m_pInstancedBuffer = std::make_unique<Buffer>(m_pd3dDevice.Get(),
+    CD3D11_BUFFER_DESC(sizeof(BasicEffect::InstancedData) * 2048, D3D11_BIND_VERTEX_BUFFER,
+    D3D11_USAGE_DYNAMIC, D3D11_CPU_ACCESS_WRITE));
 
-	// 重新调整m_Capacity
-	m_Capacity = count;
-}
+// 进行经过视锥体裁剪
+// ...
+
+// 上传实例数据
+memcpy_s(m_pInstancedBuffer->MapDiscard(m_pd3dImmediateContext.Get()), 
+         m_pInstancedBuffer->GetByteWidth(), instancedData.data(), instancedData.size() * sizeof(BasicEffect::InstancedData));
+m_pInstancedBuffer->Unmap(m_pd3dImmediateContext.Get());
 
 ```
 
-## GameObject::DrawInstanced方法--绘制游戏对象的多个实例
+## BasicEffect::DrawInstanced方法--绘制游戏对象的多个实例
 
-该方法接受一个装满物体变换信息的数组，把数据装填进实例缓冲区（若容量不够则重新扩容），然后交给设备上下文进行实例的绘制。
-
-但是要注意需要将世界矩阵和其逆的转置矩阵都进行一次转置。
+该方法接受一个存有模型数据的对象、存有实例信息的顶点缓冲区，并需要指定实例的绘制数目：
 
 ```cpp
-void GameObject::DrawInstanced(ID3D11DeviceContext* deviceContext, BasicEffect& effect, const std::vector<Transform>& data)
+void BasicEffect::DrawInstanced(ID3D11DeviceContext* deviceContext, Buffer& instancedBuffer, const GameObject& object, uint32_t numObjects)
 {
-	D3D11_MAPPED_SUBRESOURCE mappedData;
-	UINT numInsts = (UINT)data.size();
-	// 若传入的数据比实例缓冲区还大，需要重新分配
-	if (numInsts > m_Capacity)
-	{
-		ComPtr<ID3D11Device> device;
-		deviceContext->GetDevice(device.GetAddressOf());
-		ResizeBuffer(device.Get(), numInsts);
-	}
+    deviceContext->IASetInputLayout(pImpl->m_pInstancePosNormalTexLayout.Get());
+    deviceContext->IASetPrimitiveTopology(D3D11_PRIMITIVE_TOPOLOGY_TRIANGLELIST);
+    auto pPass = pImpl->m_pEffectHelper->GetEffectPass("BasicInstance");
 
-	HR(deviceContext->Map(m_pInstancedBuffer.Get(), 0, D3D11_MAP_WRITE_DISCARD, 0, &mappedData));
+    XMMATRIX V = XMLoadFloat4x4(&pImpl->m_View);
+    XMMATRIX P = XMLoadFloat4x4(&pImpl->m_Proj);
 
-	InstancedData* iter = reinterpret_cast<InstancedData*>(mappedData.pData);
-	for (auto& t : data)
-	{
-		XMMATRIX W = t.GetLocalToWorldMatrixXM();
-		iter->world = XMMatrixTranspose(W);
-		iter->worldInvTranspose = XMMatrixTranspose(InverseTranspose(W));
-		iter++;
-	}
+    XMMATRIX VP = V * P;
+    VP = XMMatrixTranspose(VP);
+    pImpl->m_pEffectHelper->GetConstantBufferVariable("g_ViewProj")->SetFloatMatrix(4, 4, (FLOAT*)&VP);
 
-	deviceContext->Unmap(m_pInstancedBuffer.Get(), 0);
+    const Model* pModel = object.GetModel();
+    size_t sz = pModel->meshdatas.size();
+    for (size_t i = 0; i < sz; ++i)
+    {
+        SetMaterial(pModel->materials[pModel->meshdatas[i].m_MaterialIndex]);
+        pPass->Apply(deviceContext);
 
-	UINT strides[2] = { m_Model.vertexStride, sizeof(InstancedData) };
-	UINT offsets[2] = { 0, 0 };
-	ID3D11Buffer* buffers[2] = { nullptr, m_pInstancedBuffer.Get() };
-	for (auto& part : m_Model.modelParts)
-	{
-		buffers[0] = part.vertexBuffer.Get();
+        MeshDataInput input = GetInputData(pModel->meshdatas[i]);
+        input.pVertexBuffers.back() = instancedBuffer.GetBuffer();
+        deviceContext->IASetVertexBuffers(0, (uint32_t)input.pVertexBuffers.size(), 
+            input.pVertexBuffers.data(), input.strides.data(), input.offsets.data());
+        deviceContext->IASetIndexBuffer(input.pIndexBuffer, input.indexCount > 65535 ? DXGI_FORMAT_R32_UINT : DXGI_FORMAT_R16_UINT, 0);
 
-		// 设置顶点/索引缓冲区
-		deviceContext->IASetVertexBuffers(0, 2, buffers, strides, offsets);
-		deviceContext->IASetIndexBuffer(part.indexBuffer.Get(), part.indexFormat, 0);
-
-		// 更新数据并应用
-		effect.SetTextureDiffuse(part.texDiffuse.Get());
-		effect.SetMaterial(part.material);
-		effect.Apply(deviceContext);
-
-		deviceContext->DrawIndexedInstanced(part.indexCount, numInsts, 0, 0, 0);
-	}
+        deviceContext->DrawIndexedInstanced(input.indexCount, numObjects, 0, 0, 0);
+    }
+    
 }
 ```
 
@@ -536,14 +398,17 @@ void GameObject::DrawInstanced(ID3D11DeviceContext* deviceContext, BasicEffect& 
 
 # 效果展示
 
-该项目展示了一个同时存在225棵树的场景，用户可以自行设置开启/关闭视锥体裁剪或硬件实例化。若关闭硬件实例化，则是对每个对象单独调用绘制命令。
+首先我们观察第1个场景。在这个场景下有256棵树，每棵树有大约6000个三角形。可以看到，开启视锥体裁剪后，可以有效减少GPU的绘制用时
 
 ![](..\assets\20\03.gif)
 
-> 注意：Debug模式下开启视锥体裁剪的效率可能比关闭还低，因为`std::vector`在debug模式下的性能相比release模式的确会有明显的损耗。
+然后是第2个场景。在这个场景下有2048个立方体，每个立方体12个三角形。可以看到，在绘制面数较少的重复模型时，实例化绘制可以带来显著优势。而开启视锥体裁剪的情况下，反而掉了帧数，说明CPU承担的压力会比较大。
 
-# 练习题
+当然，现在的游戏在追求60帧，甚至144帧流畅运行的情况下，0.5ms视锥体裁剪的运算量占一帧7ms的一小部分，但我们明显更希望在有限的时间让CPU干更多有意义的活。
 
-1. **修改教程07，利用Geometry中的立方体网格数据自己构造出3个顶点缓冲区，同时绑定到3个输入槽做验证，看结果时候和原来的一致。**
+![](..\assets\20\04.gif)
 
+> **注意：**
+>
+> - Debug模式下开启视锥体裁剪的效率可能比关闭还低的多，因为`std::vector`在debug模式下的性能相比release模式的确会有明显的损耗。一种办法是尽可能避免动态扩容，预先分配可能需要空间。
 
