--- a/docs/part2/23.md
+++ b/docs/part2/23.md
@@ -1,5 +1,7 @@
 # 前言
 
+> **注意：这一章对应项目代码2.x.x版本，持有低版本项目代码的同学请到Github更新一份**
+
 上一章的静态天空盒已经可以满足绝大部分日常使用了。但对于自带反射/折射属性的物体来说，它需要依赖天空盒进行绘制，但静态天空盒并不会记录周边的物体，更不用说正在其周围运动的物体了。因此我们需要在运行期间构建动态天空盒，将周边物体绘制入当前的动态天空盒。
 
 **没了解过静态天空盒的读者请先移步到下面的链接**：
@@ -24,10 +26,10 @@
 
 因此，我们需要用到一种叫资源视图(Resource Views)的类型，它主要有下面4种功能：
 
-1. 绑定要使用的资源
+1. 绑定要使用的资源，像指针一样引用
 2. 解释该资源具体会被用作什么类型
-3. 指定该资源的元素范围，以及纹理的子资源范围
-4. 说明该资源最终在渲染管线上的用途
+3. 指定该资源的数组元素范围`ArraySlices`，以及纹理的子资源范围`MipSlices`
+4. 说明该资源最终在渲染管线上的用途，这是资源视图本身确定的，并且具有一定的约束性
 
 **渲染目标视图**用于将渲染管线的运行结果输出给其绑定的资源，即仅能设置给输出合并阶段。这意味着该资源主要用于写入，但是在进行混合操作时还需要读取该资源。通常渲染目标是一个二维的纹理，但它依旧可能会绑定其余类型的资源。这里不做讨论。
 
@@ -35,79 +37,13 @@
 
 **着色器资源视图**提供了资源的读取权限，可以用于渲染管线的所有可编程着色器阶段中。通常该视图多用于像素着色器阶段，但要注意无法通过着色器写入该资源。
 
-## DynamicSkyRender类
 
-该类继承自上一章的SkyRender类，用以支持动态天空盒的相关操作。
-
-```cpp
-class DynamicSkyRender : public SkyRender
-{
-public:
-	DynamicSkyRender() = default;
-	~DynamicSkyRender() = default;
-	// 不允许拷贝，允许移动
-	DynamicSkyRender(const DynamicSkyRender&) = delete;
-	DynamicSkyRender& operator=(const DynamicSkyRender&) = delete;
-	DynamicSkyRender(DynamicSkyRender&&) = default;
-	DynamicSkyRender& operator=(DynamicSkyRender&&) = default;
-
-	HRESULT InitResource(ID3D11Device* device,
-		ID3D11DeviceContext* deviceContext,
-		const std::wstring& cubemapFilename,
-		int dynamicCubeSize,		// 动态天空盒纹理宽高
-		bool generateMips = false);	// 默认不为静态天空盒生成mipmaps
-									// 动态天空盒必然生成mipmaps
-
-	HRESULT InitResource(ID3D11Device* device,
-		ID3D11DeviceContext* deviceContext,
-		const std::vector<std::wstring>& cubemapFilenames,
-		int dynamicCubeSize,		// 立方体棱长
-		bool generateMips = false);	// 默认不为静态天空盒生成mipmaps
-									// 动态天空盒必然生成mipmaps
-
-
-	// 缓存当前渲染目标视图
-	void Cache(ID3D11DeviceContext* deviceContext, BasicEffect& effect);
-
-	// 指定天空盒某一面开始绘制，需要先调用Cache方法
-	void BeginCapture(ID3D11DeviceContext* deviceContext, BasicEffect& effect, const DirectX::XMFLOAT3& pos,
-		D3D11_TEXTURECUBE_FACE face, float nearZ = 1e-3f, float farZ = 1e3f);
-
-	// 恢复渲染目标视图及摄像机，并绑定当前动态天空盒
-	void Restore(ID3D11DeviceContext* deviceContext, BasicEffect& effect, const Camera& camera);
-
-	// 获取动态天空盒
-	// 注意：该方法只能在Restore后再调用
-	ID3D11ShaderResourceView* GetDynamicTextureCube();
-
-	// 获取当前用于捕获的天空盒
-	const Camera& GetCamera() const;
-
-	// 设置调试对象名
-	void SetDebugObjectName(const std::string& name);
-
-private:
-	HRESULT InitResource(ID3D11Device* device, int dynamicCubeSize);
-
-private:
-	ComPtr<ID3D11RenderTargetView>		m_pCacheRTV;		        // 临时缓存的后备缓冲区
-	ComPtr<ID3D11DepthStencilView>		m_pCacheDSV;		        // 临时缓存的深度/模板缓冲区
-
-	FirstPersonCamera					m_pCamera;				    // 捕获当前天空盒其中一面的摄像机
-	ComPtr<ID3D11DepthStencilView>		m_pDynamicCubeMapDSV;		// 动态天空盒渲染对应的深度/模板视图
-	ComPtr<ID3D11ShaderResourceView>	m_pDynamicCubeMapSRV;		// 动态天空盒对应的着色器资源视图
-	ComPtr<ID3D11RenderTargetView>		m_pDynamicCubeMapRTVs[6];	// 动态天空盒每个面对应的渲染目标视图
-
-};
-```
-
-构造函数在完成静态天空盒的初始化后，就会调用`DynamicSkyRender::InitResource`方法来初始化动态天空盒。
 
 ## Render-To-Texture 技术
 
-因为之前的个人教程把计算着色器给跳过了，`Render-To-Texture`刚好又在龙书里的这章，只好把它带到这里来讲了。
+因为之前的个人教程把计算着色器给跳过了，`Render-To-Texture`刚好又在龙书里的这章，只好把它先带到这里来讲了。
 
-在我们之前的程序中，我们都是渲染到后备缓冲区里。经过了这么多的章节，应该可以知道它的类型是`ID3D11Texture2D`，仅仅是一个2D纹理罢了。在`d3dApp`类里可以看到这部分的代码:
+在我们之前的程序中，我们都是渲染到交换链的后备缓冲区里。经过了这么多的章节，应该可以知道它的类型是`ID3D11Texture2D`，仅仅是一个2D纹理罢了。在`d3dApp`类里可以看到这部分的代码:
 
 ```cpp
 // 重设交换链并且重新创建渲染目标视图
@@ -129,318 +65,118 @@ m_pd3dImmediateContext->OMSetRenderTargets(1, m_pRenderTargetView.GetAddressOf()
 
 如果渲染目标视图绑定的是新建的2D纹理，而非后备缓冲区的话，那么渲染结果将会输出到该纹理上，并且不会直接在屏幕上显示出来。然后我们就可以使用该纹理做一些别的事情，比如绑定到着色器资源视图供可编程着色器使用，又或者将结果保存到文件等等。
 
-虽然这个技术并不高深，但它的应用非常广泛：
+## 准备动态天空盒所需的资源
 
-1. 小地图的实现
-2. 阴影映射(Shadow mapping)
-3. 屏幕空间环境光遮蔽(Screen Space Ambient Occlusion)
-4. 利用天空盒实现动态反射/折射(Dynamic reflections/refractions with cube maps)
-
-## DynamicSkyRender::InitResource方法--初始化动态纹理立方体资源
-
-### 创建动态纹理立方体和对应渲染目标视图、着色器资源视图
-
-在更新动态天空盒的时候，该纹理将会被用做渲染目标；而完成渲染后，它将用作着色器资源视图用于球体反射/折射的渲染。因此它需要在`BindFlag`设置`D3D11_BIND_RENDER_TARGET`和`D3D11_BIND_SHADER_RESOURCE`。
+首先我们需要创建一个256x256分辨率的`TextureCube`，并提供一个同样是256x256分辨率的深度缓冲区：
 
 ```cpp
-HRESULT DynamicSkyRender::InitResource(ID3D11Device * device, int dynamicCubeSize)
-{
-	HRESULT hr;
-	// ******************
-	// 1. 创建纹理数组
-	//
-
-	ComPtr<ID3D11Texture2D> texCube;
-	D3D11_TEXTURE2D_DESC texDesc;
-
-	texDesc.Width = dynamicCubeSize;
-	texDesc.Height = dynamicCubeSize;
-	texDesc.MipLevels = 0;
-	texDesc.ArraySize = 6;
-	texDesc.SampleDesc.Count = 1;
-	texDesc.SampleDesc.Quality = 0;
-	texDesc.Format = DXGI_FORMAT_R8G8B8A8_UNORM;
-	texDesc.Usage = D3D11_USAGE_DEFAULT;
-	texDesc.BindFlags = D3D11_BIND_RENDER_TARGET | D3D11_BIND_SHADER_RESOURCE;
-	texDesc.CPUAccessFlags = 0;
-	texDesc.MiscFlags = D3D11_RESOURCE_MISC_GENERATE_MIPS | D3D11_RESOURCE_MISC_TEXTURECUBE;
-
-	// 现在texCube用于新建纹理
-	hr = device->CreateTexture2D(&texDesc, nullptr, texCube.ReleaseAndGetAddressOf());
-	if (hr != S_OK)
-		return hr;
-
-	// ...
+m_pDynamicTextureCube = std::make_unique<TextureCube>(m_pd3dDevice.Get(), 256, 256, DXGI_FORMAT_R8G8B8A8_UNORM);
+m_pDynamicCubeDepthTexture = std::make_unique<Depth2D>(m_pd3dDevice.Get(), 256, 256);
+m_TextureManager.AddTexture("DynamicCube", m_pDynamicTextureCube->GetShaderResource());
 ```
 
-把`MipLevels`设置为0是要说明该纹理将会在后面生成完整的mipmap链，但不代表创建纹理后立即就会生成，需要在后续通过`GenerateMips`方法才会生成出来。为此，还需要在`MiscFlags`设置`D3D11_RESOURCE_MISC_GENERATE_MIPS`。当然，把该纹理用作天空盒的`D3D11_RESOURCE_MISC_TEXTURECUBE`标签也不能漏掉。
+默认情况下，`TextureCube`会创建完整资源的着色器资源视图、6个数组元素的着色器资源视图和渲染目标视图；`Depth2D`会创建深度/模板视图、
 
-接下来就是创建渲染目标视图的部分，纹理数组中的每个纹理都需要绑定一个渲染目标视图:
-
-```cpp
-	// ******************
-	// 2. 创建渲染目标视图
-	//
-
-	D3D11_RENDER_TARGET_VIEW_DESC rtvDesc;
-	rtvDesc.Format = texDesc.Format;
-	rtvDesc.ViewDimension = D3D11_RTV_DIMENSION_TEXTURE2DARRAY;
-	rtvDesc.Texture2DArray.MipSlice = 0;
-	// 一个视图只对应一个纹理数组元素
-	rtvDesc.Texture2DArray.ArraySize = 1;
-
-	// 每个元素创建一个渲染目标视图
-	for (int i = 0; i < 6; ++i)
-	{
-		rtvDesc.Texture2DArray.FirstArraySlice = i;
-		hr = device->CreateRenderTargetView(texCube.Get(), &rtvDesc,
-			m_pDynamicCubeMapRTVs[i].GetAddressOf());
-		if (hr != S_OK)
-			return hr;
-	}
-	
-	// ...
-```
-
-然后就是为整个纹理数组以天空盒的形式创建着色器资源视图：
-
-```cpp
-	// ******************
-	// 3. 创建着色器资源视图
-	//
-
-	D3D11_SHADER_RESOURCE_VIEW_DESC srvDesc;
-	srvDesc.Format = texDesc.Format;
-	srvDesc.ViewDimension = D3D11_SRV_DIMENSION_TEXTURECUBE;
-	srvDesc.TextureCube.MostDetailedMip = 0;
-	srvDesc.TextureCube.MipLevels = -1;	// 使用所有的mip等级
-
-	hr = device->CreateShaderResourceView(texCube.Get(), &srvDesc,
-		m_pDynamicCubeMapSRV.GetAddressOf());
-	if (hr != S_OK)
-		return hr;
-```
-
-到这里还没有结束。
-
-### 为动态天空盒创建深度缓冲区和视口
-
-通常天空盒表面分辨率和后备缓冲区的分辨率不一致，这意味着我们还需要创建一个和天空盒表面分辨率一致的深度缓冲区(无模板测试)：
-
-```cpp
-	// ******************
-	// 4. 创建深度/模板缓冲区与对应的视图
-	//
-
-	texDesc.Width = dynamicCubeSize;
-	texDesc.Height = dynamicCubeSize;
-	texDesc.MipLevels = 1;
-	texDesc.ArraySize = 1;
-	texDesc.SampleDesc.Count = 1;
-	texDesc.SampleDesc.Quality = 0;
-	texDesc.Format = DXGI_FORMAT_D32_FLOAT;
-	texDesc.Usage = D3D11_USAGE_DEFAULT;
-	texDesc.BindFlags = D3D11_BIND_DEPTH_STENCIL;
-	texDesc.CPUAccessFlags = 0;
-	texDesc.MiscFlags = 0;
-
-	ComPtr<ID3D11Texture2D> depthTex;
-	hr = device->CreateTexture2D(&texDesc, nullptr, depthTex.GetAddressOf());
-	if (hr != S_OK)
-		return hr;
-
-	D3D11_DEPTH_STENCIL_VIEW_DESC dsvDesc;
-	dsvDesc.Format = texDesc.Format;
-	dsvDesc.Flags = 0;
-	dsvDesc.ViewDimension = D3D11_DSV_DIMENSION_TEXTURE2D;
-	dsvDesc.Texture2D.MipSlice = 0;
-
-	hr = device->CreateDepthStencilView(
-		depthTex.Get(),
-		&dsvDesc,
-		m_pDynamicCubeMapDSV.GetAddressOf());
-	if (hr != S_OK)
-		return hr;
-```
-
-同样，视口也需要经过适配。不过之前的摄像机类可以帮我们简化一下：
-
-```cpp
-	// ******************
-	// 5. 初始化视口
-	//
-
-	m_pCamera.SetViewPort(0.0f, 0.0f, static_cast<float>(dynamicCubeSize), static_cast<float>(dynamicCubeSize));
-
-	return S_OK;
-}
-```
+因为该动态天空盒最终是要用作着色器资源的，我们可以把它挂载到`TextureManager`上。
 
 ## 动态天空盒的绘制
 
-讲完了初始化的事，就要开始留意帧与帧之间的动态天空盒渲染操作了。除了绘制部分以外的操作都交给了`DynamicSkyRender`类来完成。总结如下(粗体部分为该方法完成的任务)：
+绘制动态天空盒的过程如下：
 
-1. 缓存设备上下文绑定的后备缓冲区、深度/模板缓冲区
-2. 清空设置在像素着色器的着色器资源视图(绑定了动态天空盒资源)
-3. 对准某一个坐标轴，以90度垂直视野(FOV)，1.0f的宽高比架设摄像机，并调整视口
-4. 清理当前天空盒面对应的纹理和深度缓冲区，并绑定到设备上下文
-5. 和往常一样绘制物体和静态天空盒
-6. 回到步骤3，继续下一个面的绘制，直到6个面都完成渲染
-7. 为设备上下文恢复后备缓冲区、深度/模板缓冲区并释放内部缓存(防止交换链`ResizeBuffer`时因为引用的遗留出现问题)
-8. 让动态天空盒生成mipmap链，并将其绑定到像素着色器
-9. 利用动态天空盒绘制反射/折射物体，和往常一样绘制剩余物体，并利用静态天空盒绘制天空
+对每个立方体天空盒
 
-### DynamicSkyRender::Cache方法--缓存渲染目标视图
-
-该方法对应上面所说的第1,2步：
+1. 清空设置在像素着色器的着色器资源视图(绑定了动态天空盒资源)
+2. 对准某一个坐标轴，设置正确的观察矩阵；投影矩阵以90度垂直视场角，1.0的宽高比架设，并调整视口
+3. 清理当前天空盒面对应的纹理和深度缓冲区，并绑定到设备上下文
+4. 和往常一样绘制物体和静态天空盒
+5. 回到步骤3，继续下一个面的绘制，直到6个面都完成渲染
+6. 利用动态天空盒绘制反射/折射物体，和往常一样绘制剩余物体，并利用静态天空盒绘制天空
 
 ```cpp
-void DynamicSkyRender::Cache(ComPtr<ID3D11DeviceContext> deviceContext, BasicEffect& effect)
+// 下面的代码省略视锥体裁剪 和 无关部分
+
+// 创建动态天空盒
+m_pCubeCamera = std::make_shared<FirstPersonCamera>();
+m_pCubeCamera->SetFrustum(XM_PIDIV2, 1.0f, 0.1f, 1000.0f);
+m_pCubeCamera->SetViewPort(0.0f, 0.0f, 256.0f, 256.0f);
+
+static XMFLOAT3 ups[6] = {
+    { 0.0f, 1.0f, 0.0f },	// +X
+    { 0.0f, 1.0f, 0.0f },   // -X
+    { 0.0f, 0.0f, -1.0f },  // +Y
+    { 0.0f, 0.0f, 1.0f },   // -Y
+    { 0.0f, 1.0f, 0.0f },   // +Z
+    { 0.0f, 1.0f, 0.0f }    // -Z
+};
+
+static XMFLOAT3 looks[6] = {
+    { 1.0f, 0.0f, 0.0f },	// +X
+    { -1.0f, 0.0f, 0.0f },  // -X
+    { 0.0f, 1.0f, 0.0f },	// +Y
+    { 0.0f, -1.0f, 0.0f },  // -Y
+    { 0.0f, 0.0f, 1.0f },	// +Z
+    { 0.0f, 0.0f, -1.0f },  // -Z
+};
+
+// 绘制动态天空盒的每个面（以球体为中心）
+for (int i = 0; i < 6; ++i)
 {
-	deviceContext->OMGetRenderTargets(1, m_pCacheRTV.GetAddressOf(), m_pCacheDSV.GetAddressOf());
+    m_pCubeCamera->LookTo(m_CenterSphere.GetTransform().GetPosition(), looks[i], ups[i]);
 
-	// 清掉绑定在着色器的动态天空盒，需要立即生效
-	effect.SetTextureCube(nullptr);
-	effect.Apply(deviceContext.Get());
-}
-
-```
-
-### DynamicSkyRender::BeginCapture方法--指定天空盒某一面开始绘制
-
-该方法对应上面所说的第3,4步：
-
-```cpp
-void DynamicSkyRender::BeginCapture(ID3D11DeviceContext* deviceContext, BasicEffect& effect, const XMFLOAT3& pos,
-	D3D11_TEXTURECUBE_FACE face, float nearZ, float farZ)
-{
-	static XMFLOAT3 ups[6] = {
-		{ 0.0f, 1.0f, 0.0f },	// +X
-		{ 0.0f, 1.0f, 0.0f },	// -X
-		{ 0.0f, 0.0f, -1.0f },	// +Y
-		{ 0.0f, 0.0f, 1.0f },	// -Y
-		{ 0.0f, 1.0f, 0.0f },	// +Z
-		{ 0.0f, 1.0f, 0.0f }	// -Z
-	};
-
-	static XMFLOAT3 looks[6] = {
-		{ 1.0f, 0.0f, 0.0f },	// +X
-		{ -1.0f, 0.0f, 0.0f },	// -X
-		{ 0.0f, 1.0f, 0.0f },	// +Y
-		{ 0.0f, -1.0f, 0.0f },	// -Y
-		{ 0.0f, 0.0f, 1.0f },	// +Z
-		{ 0.0f, 0.0f, -1.0f },	// -Z
-	};
-
-	// 设置天空盒摄像机
-	m_pCamera.LookTo(pos, looks[face], ups[face]);
-
-	// 这里尽可能捕获近距离物体
-	m_pCamera.SetFrustum(XM_PIDIV2, 1.0f, nearZ, farZ);
-
-	// 应用观察矩阵、投影矩阵
-	effect.SetViewMatrix(m_pCamera.GetViewXM());
-	effect.SetProjMatrix(m_pCamera.GetProjXM());
-
-	// 清空缓冲区
-	deviceContext->ClearRenderTargetView(m_pDynamicCubeMapRTVs[face].Get(), reinterpret_cast<const float*>(&Colors::Black));
-	deviceContext->ClearDepthStencilView(m_pDynamicCubeMapDSV.Get(), D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
-	// 设置渲染目标和深度模板视图
-	deviceContext->OMSetRenderTargets(1, m_pDynamicCubeMapRTVs[face].GetAddressOf(), m_pDynamicCubeMapDSV.Get());
-	// 设置视口
-	deviceContext->RSSetViewports(1, &m_pCamera.GetViewPort());
+    // 不绘制中心球
+    DrawScene(false, *m_pCubeCamera, m_pDynamicTextureCube->GetRenderTarget(i), m_pDynamicCubeDepthTexture->GetDepthStencil());
 }
 ```
 
-在调用该方法后，就可以开始绘制到天空盒的指定面了，直到下一次`DynamicSkyRender::BeginCapture`或`DynamicSkyRender::Restore`被调用。
-
-### DynamicSkyRender::Restore方法--恢复之前绑定的资源并清空缓存
-
-该方法对应上面所说的第7,8步:
-
 ```cpp
-void DynamicSkyRender::Restore(ComPtr<ID3D11DeviceContext> deviceContext, BasicEffect& effect, const Camera & camera)
+void GameApp::DrawScene(bool drawCenterSphere, const Camera& camera, ID3D11RenderTargetView* pRTV, ID3D11DepthStencilView* pDSV)
 {
-	// 恢复默认设定
-	deviceContext->RSSetViewports(1, &camera.GetViewPort());
-	deviceContext->OMSetRenderTargets(1, m_pCacheRTV.GetAddressOf(), m_pCacheDSV.Get());
+    float black[4] = { 0.0f, 0.0f, 0.0f, 1.0f };
+    m_pd3dImmediateContext->ClearRenderTargetView(pRTV, black);
+    m_pd3dImmediateContext->ClearDepthStencilView(pDSV, D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
+    m_pd3dImmediateContext->OMSetRenderTargets(1, &pRTV, pDSV);
 
-	// 生成动态天空盒后必须要生成mipmap链
-	deviceContext->GenerateMips(m_pDynamicCubeMapSRV.Get());
+    D3D11_VIEWPORT viewport = camera.GetViewPort();
+    m_pd3dImmediateContext->RSSetViewports(1, &viewport);
+    // 绘制模型
+    m_BasicEffect.SetViewMatrix(camera.GetViewMatrixXM());
+    m_BasicEffect.SetProjMatrix(camera.GetProjMatrixXM());   
+    m_BasicEffect.SetEyePos(camera.GetPosition());
+    m_BasicEffect.SetRenderDefault();
 
-	effect.SetViewMatrix(camera.GetViewXM());
-	effect.SetProjMatrix(camera.GetProjXM());
-	// 恢复绑定的动态天空盒
-	effect.SetTextureCube(m_pDynamicCubeMapSRV);
+    /*
+      省略中心球绘制代码
+    */
+    
+    m_BasicEffect.SetReflectionEnabled(false);
+    m_BasicEffect.SetRefractionEnabled(false);
+    
+    // 绘制地面
+    m_Ground.Draw(m_pd3dImmediateContext.Get(), m_BasicEffect);
 
-	// 清空临时缓存的渲染目标视图和深度模板视图
-	m_pCacheDSV.Reset();
-	m_pCacheRTV.Reset();
+    // 绘制五个圆柱
+    for (auto& cylinder : m_Cylinders)
+        cylinder.Draw(m_pd3dImmediateContext.Get(), m_BasicEffect);
+    
+    // 绘制五个圆球
+    for (auto& sphere : m_Spheres)
+        sphere.Draw(m_pd3dImmediateContext.Get(), m_BasicEffect);
+
+    // 绘制天空盒
+    m_SkyboxEffect.SetViewMatrix(camera.GetViewMatrixXM());
+    m_SkyboxEffect.SetProjMatrix(camera.GetProjMatrixXM());
+    m_SkyboxEffect.SetRenderDefault();
+    m_Skybox.Draw(m_pd3dImmediateContext.Get(), m_SkyboxEffect);
 }
-
 ```
-
-## GameApp::DrawScene方法
-
-在GameApp类多了这样一个重载的成员函数：
-
-```cpp
-void GameApp::DrawScene(bool drawCenterSphere);
-
-```
-
-该方法额外添加了一个参数，仅用于控制中心球是否要绘制，而其余的物体不管怎样都是要绘制出来的。使用该重载方法有利于减少代码重复，这里面的大部分物体都需要绘制7次。
-
-假如只考虑`Daylight`天空盒的话，无形参的`GameApp::DrawScene`方法关于3D场景的绘制可以简化成这样:
-
-```cpp
-void GameApp::DrawScene()
-{
-	// ******************
-	// 生成动态天空盒
-	//
-	
-	// 保留当前绘制的渲染目标视图和深度模板视图
-	m_pDaylight->Cache(m_pd3dImmediateContext.Get(), m_BasicEffect);
-	
-	// 绘制动态天空盒的每个面（以球体为中心）
-	for (int i = 0; i < 6; ++i)
-	{
-		m_pDaylight->BeginCapture(m_pd3dImmediateContext.Get(), m_BasicEffect,
-			XMFLOAT3(0.0f, 0.0f, 0.0f), static_cast<D3D11_TEXTURECUBE_FACE>(i));
-
-		// 不绘制中心球
-		DrawScene(false);
-	}
-	
-	// 恢复之前的绘制设定
-	m_pDaylight->Restore(m_pd3dImmediateContext.Get(), m_BasicEffect, *m_pCamera);
-	
-	// ******************
-	// 绘制场景
-	//
-
-	// 预先清空
-	m_pd3dImmediateContext->ClearRenderTargetView(m_pRenderTargetView.Get(), reinterpret_cast<const float*>(&Colors::Black));
-	m_pd3dImmediateContext->ClearDepthStencilView(m_pDepthStencilView.Get(), D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
-
-	// 绘制中心球
-	DrawScene(true);
-	
-	// 省略文字绘制部分...
-}
-
-```
-
-至于有形参的`GameApp::DrawScene`方法就不在这里给出，可以在项目源码看到。
 
 # 使用几何着色器的动态天空盒
 
-这部分内容并没有融入到项目中，因此只是简单地提及一下。
+这部分内容并没有融入到项目中，因此只是简单地提及一下。建议作为练习题尝试。
 
 在上面的内容中，我们对一个场景绘制了6次，从而生成动态天空盒。为了减少绘制调用，这里可以使用几何着色器来使得只需要进行1次绘制调用就可以生成整个动态天空盒。
 
-首先，创建一个渲染目标视图绑定整个纹理数组：
+这里我们可以直接创建一个`Texture2DCube`，它内部会创建一个渲染目标视图，允许访问里面的6张纹理。创建RTV的过程大致为：
 
 ```cpp
 D3D11_RENDER_TARGET_VIEW_DESC rtvDesc;
@@ -454,11 +190,9 @@ HR(device->CreateRenderTargetView(
 	&rtvDesc,
 	m_pDynamicCubeMapRTV.GetAddressOf()));
 
-rtvDesc.
-
 ```
 
-紧接着，就是要创建一个深度缓冲区数组(一个对应立方体面，元素个数为6)：
+紧接着，就是要创建一个`Depth2DArray`，元素个数为6，让每个面对应一个子深度缓冲区，同样它内部会创建一个包含完整资源的深度/模板视图。创建DSV的过程大致为：
 
 ```cpp
 D3D11_DEPTH_STENCIL_VIEW_DESC dsvDesc;
@@ -474,16 +208,13 @@ HR(device->CreateDepthStencilView(
 
 ```
 
-在输出合并阶段这样绑定到渲染管线:
+在输出合并阶段这样绑定到渲染管线：
 
 ```cpp
 deviceContext->OMSetRenderTargets(1, 
 	m_pDynamicCubeMapRTV.Get(),
 	m_pDynamicCubeMapDSV.Get());
-
 ```
-
-这样做会使得一次调用绘制可以同时向该渲染目标视图对应的六个纹理进行渲染。
 
 在HLSL，现在需要同时在常量缓冲区提供6个观察矩阵。顶点着色阶段将顶点直接传递给几何着色器，然后几何着色器重复传递一个顶点六次，但区别在于每次将会传递给不同的渲染目标。这需要依赖系统值`SV_RenderTargetArrayIndex`来实现，它是一个整型索引值，并且只能由几何着色器写入来指定当前需要往渲染目标视图所绑定的纹理数组中的哪一个纹理。该系统值只能用于绑定了纹理数组的视图。
 
@@ -528,7 +259,9 @@ void GS(trangle VertexPosTex input[3],
 
 ```
 
-上面的代码是经过魔改的，至于与它相关的示例项目`CubeMapGS`只能在旧版的Microsoft DirectX SDK的Samples中看到了。
+上面的代码是经过魔改的，至于与它相关的示例项目`CubeMapGS11`现在在网上存留了这个版本[CubeMapGS11](https://github.com/spark-shading-language/spark/tree/bf3c69aa2b7e050e0a6769bf6a5fbc205392982c/examples/Direct3D11/CubeMapGS11)。
+
+总的来说在绘制物体不是很多的情况可以获得显著的性能提升吧，更复杂的场景就没有测试了。
 
 这种方法有两点不那么吸引人的原因：
 
@@ -592,4 +325,8 @@ if (g_RefractionEnabled)
 ![](..\assets\23\03.gif)
 
 ![](..\assets\23\04.gif)
+
+# 练习题
+
+1. **尝试实现使用几何着色器的动态天空盒**
 
