--- a/docs/part3/31.md
+++ b/docs/part3/31.md
@@ -1,8 +1,10 @@
 # 前言
 
+> **注意：这一章对应项目代码2.x.x版本，持有低版本项目代码的同学请到Github更新一份**
+
 阴影既暗示着光源相对于观察者的位置关系，也从侧面传达了场景中各物体之间的相对位置。本章将起底最基础的阴影映射算法，而像复杂如级联阴影映射这样的技术，也是在阴影映射的基础上发展而来的。
 
-从本章开始我们将使用`EffectHelper`进一步简化所编写的特效，为此你可能还需要了解下面的章节：
+在学完前面的章节后，你可以尝试了解下面的章节以查看`EffectHelper`是怎么实现的：
 
 | 章节                                                         |
 | ------------------------------------------------------------ |
@@ -219,7 +221,7 @@ rsDesc.SlopeScaledDepthBias = 1.0f
 
 >  注意：深度偏移发生在光栅化期间（裁剪之后），因此不会对几何体裁剪造成影响。
 
-在`RenderStates`中我们添加了这样一个光栅化状态：
+但在`RenderStates`中我们添加了这样一个光栅化状态，因为我们打算将Depth Bias留在shader里面调整会更方便一些：
 
 ```cpp
 // 深度偏移模式
@@ -227,17 +229,15 @@ rasterizerDesc.FillMode = D3D11_FILL_SOLID;
 rasterizerDesc.CullMode = D3D11_CULL_BACK;
 rasterizerDesc.FrontCounterClockwise = false;
 rasterizerDesc.DepthClipEnable = true;
-rasterizerDesc.DepthBias = 100000;
+rasterizerDesc.DepthBias = 0;
 rasterizerDesc.DepthBiasClamp = 0.0f;
 rasterizerDesc.SlopeScaledDepthBias = 1.0f;
-HR(device->CreateRasterizerState(&rasterizerDesc, RSDepth.GetAddressOf()));
+HR(device->CreateRasterizerState(&rasterizerDesc, RSShadow.GetAddressOf()));
 ```
 
 
 
 MSDN文档[Depth Bias](https://docs.microsoft.com/zh-cn/windows/win32/direct3d11/d3d10-graphics-programming-guide-output-merger-stage-depth-bias)讲述了该技术相关的全部规则，并且介绍了如何使用浮点深度缓冲区进行工作。
-
-
 
 # 百分比渐近过滤（PCF）
 
@@ -312,16 +312,19 @@ depth <= sampleDepth
 ComPtr<ID3D11SamplerState> RenderStates::SSShadow = nullptr;
 
 // 采样器状态：深度比较与Border模式
-ZeroMemory(&sampDesc, sizeof(sampDesc));
 sampDesc.Filter = D3D11_FILTER_COMPARISON_MIN_MAG_LINEAR_MIP_POINT;
 sampDesc.AddressU = D3D11_TEXTURE_ADDRESS_BORDER;
 sampDesc.AddressV = D3D11_TEXTURE_ADDRESS_BORDER;
 sampDesc.AddressW = D3D11_TEXTURE_ADDRESS_BORDER;
-sampDesc.ComparisonFunc = D3D11_COMPARISON_LESS_EQUAL;
-sampDesc.BorderColor[0] = { 1.0f };
-sampDesc.MinLOD = 0;
-sampDesc.MaxLOD = D3D11_FLOAT32_MAX;
-HR(device->CreateSamplerState(&sampDesc, SSShadow.GetAddressOf()));
+sampDesc.ComparisonFunc = D3D11_COMPARISON_LESS;
+sampDesc.MaxAnisotropy = 1;
+sampDesc.MinLOD = 0.0f;
+sampDesc.MaxLOD = 0.0f;
+sampDesc.BorderColor[0] = 0.0f;
+sampDesc.BorderColor[1] = 0.0f;
+sampDesc.BorderColor[2] = 0.0f;
+sampDesc.BorderColor[3] = 1.0f;
+HR(device->CreateSamplerState(&sampDesc, SSShadowPCF.GetAddressOf()));
 ```
 
 > **注意：**根据SDK文档所述，只有`R32_FLOAT_X8X24_TYPELESS`、`R32_FLOAT`，`R24_UNORM_X8_TYPELESS`、`R16_UNORM`格式才能用于比较过滤器。
@@ -332,7 +335,7 @@ HR(device->CreateSamplerState(&sampDesc, SSShadow.GetAddressOf()));
 
 显然，PCF技术一般来说只需在阴影的边缘进行，因为阴影内外两部分并不涉及混合操作（只有阴影边缘才是渐变的）。基于此，只要能对阴影边缘的PCF设计相应的处理方案就好了。但这种做法一般要求我们所用的PCF核足够大（5x5及更大）时才划算（因为动态分支也有开销）。不过最终是要效率还是要画质还是取决于你自己。
 
->  注意：实际工程中所用的PCF核不一定是方形的过滤栅格。不少文献也指出，随机的拾取点也可以作为PCF核。
+>  注意：实际工程中所用的PCF核不一定是方形的过滤栅格。不少文献也指出，随机的采样点也可以作为PCF核。
 
 考虑到在做比较时，如果处于阴影外的值为1，在阴影内的值为0，在采用`SampleCmpLevelZero`和均值滤波后，我们用范围值0~1来表示处于阴影外的程度。随着值的增加，该点也变得越亮。我们可以使用下面的函数来计算3x3正方形的均值滤波下的阴影因子：
 
@@ -390,268 +393,75 @@ for (i = 0; i < 5; ++i)
 
 由于环境光是间接光，所以阴影因子不受影响。并且，阴影因子也不会对来自环境映射的反射光构成影响。
 
-# C++端代码实现
+# Depth2D类
 
-在本章中，与阴影特效直接相关的类有`BasicEffect`、`ShadowEffect`，然后`TextureRender`类在本章还作为阴影图使用。`GameApp`类承担了实现过程。
-
-## 改进TextureRender
-
-既然阴影贴图和RTT有着许多相似的地方，那何不把它也放到TextureRender里面共用呢？只要添加一个开关控制该RTT是否用作阴影贴图即可。
+在本章中，与阴影特效直接相关的类有`BasicEffect`、`ShadowEffect`，然后`Depth2D`类作为阴影图和深度缓冲区使用。
 
 ```cpp
-class TextureRender
+enum class DepthStencilBitsFlag
+{
+    Depth_16Bits = 0,
+    Depth_24Bits_Stencil_8Bits = 1,
+    Depth_32Bits = 2,
+    Depth_32Bits_Stencil_8Bits_Unused_24Bits = 3,
+};
+
+class Depth2D : public Texture2DBase
 {
 public:
-    template<class T>
-    using ComPtr = Microsoft::WRL::ComPtr<T>;
+    Depth2D(ID3D11Device* device, uint32_t width, uint32_t height,
+        DepthStencilBitsFlag depthStencilBitsFlag = DepthStencilBitsFlag::Depth_24Bits_Stencil_8Bits,
+        uint32_t bindFlags = D3D11_BIND_DEPTH_STENCIL | D3D11_BIND_SHADER_RESOURCE);
+    ~Depth2D() override = default;
 
-    TextureRender() = default;
-    ~TextureRender() = default;
-    // 不允许拷贝，允许移动
-    TextureRender(const TextureRender&) = delete;
-    TextureRender& operator=(const TextureRender&) = delete;
-    TextureRender(TextureRender&&) = default;
-    TextureRender& operator=(TextureRender&&) = default;
-
-
-    HRESULT InitResource(ID3D11Device* device,
-        int texWidth,
-        int texHeight,
-        bool shadowMap = false,
-        bool generateMips = false);
-
-    // 开始对当前纹理进行渲染
-    // 阴影贴图无需提供背景色
-    void Begin(ID3D11DeviceContext* deviceContext, const FLOAT backgroundColor[4]);
-    // 结束对当前纹理的渲染，还原状态
-    void End(ID3D11DeviceContext * deviceContext);
-    // 获取渲染好的纹理的着色器资源视图
-    // 阴影贴图返回的是深度缓冲区
-    // 引用数不增加，仅用于传参
-    ID3D11ShaderResourceView* GetOutputTexture();
+    ID3D11DepthStencilView* GetDepthStencil() { return m_pTextureDSV.Get(); }
 
     // 设置调试对象名
-    void SetDebugObjectName(const std::string& name);
+    void SetDebugObjectName(std::string_view name) override;
 
 private:
-    ComPtr<ID3D11ShaderResourceView>        m_pOutputTextureSRV;          // 输出的纹理(或阴影贴图)对应的着色器资源视图
-    ComPtr<ID3D11RenderTargetView>          m_pOutputTextureRTV;          // 输出的纹理对应的渲染目标视图
-    ComPtr<ID3D11DepthStencilView>          m_pOutputTextureDSV;          // 输出纹理所用的深度/模板视图(或阴影贴图)
-    D3D11_VIEWPORT                          m_OutputViewPort = {};        // 输出所用的视口
-
-    ComPtr<ID3D11RenderTargetView>          m_pCacheRTV;                  // 临时缓存的后备缓冲区
-    ComPtr<ID3D11DepthStencilView>          m_pCacheDSV;                  // 临时缓存的深度/模板缓冲区
-    D3D11_VIEWPORT                          m_CacheViewPort = {};         // 临时缓存的视口
-
-    bool                                    m_GenerateMips = false;       // 是否生成mipmap链
-    bool                                    m_ShadowMap = false;          // 是否为阴影贴图
-
+    ComPtr<ID3D11DepthStencilView> m_pTextureDSV;
 };
 ```
 
-
-
-在作为RTT时，需要创建纹理与它的SRV和RTV、深度/模板缓冲区和它的DSV、视口
-
-而作为阴影贴图时，需要创建深度缓冲区与它的SRV和DSV、视口
-
-下面的代码只关注创建阴影贴图的部分：
+默认情况下，它可以直接创建出DSV和SRV。其中原始资源、DSV和SRV要求对应的格式如下：
 
 ```cpp
-HRESULT TextureRender::InitResource(ID3D11Device* device, int texWidth, int texHeight, bool shadowMap, bool generateMips)
+static DXGI_FORMAT GetDepthTextureFormat(DepthStencilBitsFlag flag)
 {
-    // 防止重复初始化造成内存泄漏
-    m_pOutputTextureSRV.Reset();
-    m_pOutputTextureRTV.Reset();
-    m_pOutputTextureDSV.Reset();
-    m_pCacheRTV.Reset();
-    m_pCacheDSV.Reset();
-
-    m_ShadowMap = shadowMap;
-    m_GenerateMips = false;
-    HRESULT hr;
-    
-    // ...
-    
-    // ******************
-    // 创建与纹理等宽高的深度/模板缓冲区或阴影贴图，以及对应的视图
-    //
-    CD3D11_TEXTURE2D_DESC texDesc((m_ShadowMap ? DXGI_FORMAT_R24G8_TYPELESS : DXGI_FORMAT_D24_UNORM_S8_UINT),
-        texWidth, texHeight, 1, 1,
-        D3D11_BIND_DEPTH_STENCIL | (m_ShadowMap ? D3D11_BIND_SHADER_RESOURCE : 0));
-
-    ComPtr<ID3D11Texture2D> depthTex;
-    hr = device->CreateTexture2D(&texDesc, nullptr, depthTex.GetAddressOf());
-    if (FAILED(hr))
-        return hr;
-
-    CD3D11_DEPTH_STENCIL_VIEW_DESC dsvDesc(depthTex.Get(), D3D11_DSV_DIMENSION_TEXTURE2D, DXGI_FORMAT_D24_UNORM_S8_UINT);
-
-    hr = device->CreateDepthStencilView(depthTex.Get(), &dsvDesc,
-        m_pOutputTextureDSV.GetAddressOf());
-    if (FAILED(hr))
-        return hr;
-
-    if (m_ShadowMap)
+    switch (flag)
     {
-        // 阴影贴图的SRV
-        CD3D11_SHADER_RESOURCE_VIEW_DESC srvDesc(depthTex.Get(), D3D11_SRV_DIMENSION_TEXTURE2D, DXGI_FORMAT_R24_UNORM_X8_TYPELESS);
-
-        hr = device->CreateShaderResourceView(depthTex.Get(), &srvDesc,
-            m_pOutputTextureSRV.GetAddressOf());
-        if (FAILED(hr))
-            return hr;
-    }
-
-    // ******************
-    // 初始化视口
-    //
-    m_OutputViewPort.TopLeftX = 0.0f;
-    m_OutputViewPort.TopLeftY = 0.0f;
-    m_OutputViewPort.Width = static_cast<float>(texWidth);
-    m_OutputViewPort.Height = static_cast<float>(texHeight);
-    m_OutputViewPort.MinDepth = 0.0f;
-    m_OutputViewPort.MaxDepth = 1.0f;
-
-    return S_OK;
-}
-
-```
-
-需要注意的是，在创建深度缓冲区时，如果还想为他创建SRV，就不能将DXGI格式定义成`DXGI_FORMAT_D24_UNORM_S8_UINT`这些带D的类型，而应该是`DXGI_FORMAT_R24G8_TYPELESS`
-
-然后在创建阴影贴图的SRV时，则需要指定为`DXGI_FORMAT_R24_UNORM_X8_TYPELESS`
-
-开始阴影贴图的渲染前，不需要设置RTV，只需要绑定DSV。
-
-```cpp
-void TextureRender::Begin(ID3D11DeviceContext* deviceContext, const FLOAT backgroundColor[4])
-{
-    // 缓存渲染目标和深度模板视图
-    deviceContext->OMGetRenderTargets(1, m_pCacheRTV.GetAddressOf(), m_pCacheDSV.GetAddressOf());
-    // 缓存视口
-    UINT num_Viewports = 1;
-    deviceContext->RSGetViewports(&num_Viewports, &m_CacheViewPort);
-
-    // 清空缓冲区
-    // ... 
-    deviceContext->ClearDepthStencilView(m_pOutputTextureDSV.Get(), D3D11_CLEAR_DEPTH | (m_ShadowMap ? 0 : D3D11_CLEAR_STENCIL), 1.0f, 0);
-    
-    // 设置渲染目标和深度模板视图
-    deviceContext->OMSetRenderTargets((m_ShadowMap ? 0 : 1), 
-        (m_ShadowMap ? nullptr : m_pOutputTextureRTV.GetAddressOf()), 
-        m_pOutputTextureDSV.Get());
-    // 设置视口
-    deviceContext->RSSetViewports(1, &m_OutputViewPort);
-}
-```
-
-渲染完成后，和往常一样还原即可。
-
-## EffectHelper的引入
-
-本章开始的代码引入了`EffectHelper`来管理着色器所需的资源（我们可以无需手动创建并交给它来托管），并应用在了所有的`Effect`类当中。除了`IEffect`接口类，目前还引入了`IEffectTransform`接口类来统一变换的设置。
-
-```cpp
-class IEffectTransform
-{
-public:
-    virtual void XM_CALLCONV SetWorldMatrix(DirectX::FXMMATRIX W) = 0;
-    virtual void XM_CALLCONV SetViewMatrix(DirectX::FXMMATRIX V) = 0;
-    virtual void XM_CALLCONV SetProjMatrix(DirectX::FXMMATRIX P) = 0;
-};
-
-class IEffectTextureDiffuse
-{
-public:
-    virtual void SetTextureDiffuse(ID3D11ShaderResourceView* textureDiffuse) = 0;
-};
-```
-
-然后特效类再根据自己的需要选择接口并实现：
-
-```cpp
-class BasicEffect : public IEffect, public IEffectTransform, public IEffectTextureDiffuse
-{
-    // ...
-};
-```
-
-随着抽象类的增加，像`GameObject`这样的类就可以对`IEffect`接口类对象查询是否有某一特定接口类或具体类来执行额外的复杂操作。
-
-```cpp
-void GameObject::Draw(ID3D11DeviceContext * deviceContext, IEffect * effect)
-{
-    UINT strides = m_Model.vertexStride;
-    UINT offsets = 0;
-
-    for (auto& part : m_Model.modelParts)
-    {
-        // 设置顶点/索引缓冲区
-        deviceContext->IASetVertexBuffers(0, 1, part.vertexBuffer.GetAddressOf(), &strides, &offsets);
-        deviceContext->IASetIndexBuffer(part.indexBuffer.Get(), part.indexFormat, 0);
-
-        /// 更新数据并应用
-        IEffectTransform* pEffectTransform = dynamic_cast<IEffectTransform*>(effect);
-        if (pEffectTransform)
-        {
-            pEffectTransform->SetWorldMatrix(m_Transform.GetLocalToWorldMatrixXM());
-        }
-
-        IEffectTextureDiffuse* pEffectTextureDiffuse = dynamic_cast<IEffectTextureDiffuse*>(effect);
-        if (pEffectTextureDiffuse)
-        {
-            pEffectTextureDiffuse->SetTextureDiffuse(part.texDiffuse.Get());
-        }
-
-        BasicEffect* pBasicEffect = dynamic_cast<BasicEffect*>(effect);
-        if (pBasicEffect)
-        {
-            pBasicEffect->SetTextureNormalMap(part.texNormalMap.Get());
-            pBasicEffect->SetMaterial(part.material);
-        }
-        
-        effect->Apply(deviceContext);
-
-        deviceContext->DrawIndexed(part.indexCount, 0, 0);
+    case DepthStencilBitsFlag::Depth_16Bits: return DXGI_FORMAT_R16_TYPELESS;
+    case DepthStencilBitsFlag::Depth_24Bits_Stencil_8Bits: return DXGI_FORMAT_R24G8_TYPELESS;
+    case DepthStencilBitsFlag::Depth_32Bits: return DXGI_FORMAT_R32_TYPELESS;
+    case DepthStencilBitsFlag::Depth_32Bits_Stencil_8Bits_Unused_24Bits: return DXGI_FORMAT_R32G8X24_TYPELESS;
+    default: return DXGI_FORMAT_UNKNOWN;
     }
 }
 
-void GameObject::DrawInstanced(ID3D11DeviceContext* deviceContext, IEffect * effect, const std::vector<Transform> & data)
+static DXGI_FORMAT GetDepthSRVFormat(DepthStencilBitsFlag flag)
 {
-    // ...
-
-    UINT strides[2] = { m_Model.vertexStride, sizeof(InstancedData) };
-    UINT offsets[2] = { 0, 0 };
-    ID3D11Buffer* buffers[2] = { nullptr, m_pInstancedBuffer.Get() };
-    for (auto& part : m_Model.modelParts)
+    switch (flag)
     {
-        buffers[0] = part.vertexBuffer.Get();
-
-        // 设置顶点/索引缓冲区
-        deviceContext->IASetVertexBuffers(0, 2, buffers, strides, offsets);
-        deviceContext->IASetIndexBuffer(part.indexBuffer.Get(), part.indexFormat, 0);
-
-        // 更新数据并应用
-        IEffectTextureDiffuse* pEffectTextureDiffuse = dynamic_cast<IEffectTextureDiffuse*>(effect);
-        if (pEffectTextureDiffuse)
-        {
-            pEffectTextureDiffuse->SetTextureDiffuse(part.texDiffuse.Get());
-        }
-
-        BasicEffect* pBasicEffect = dynamic_cast<BasicEffect*>(effect);
-        if (pBasicEffect)
-        {
-            pBasicEffect->SetTextureNormalMap(part.texNormalMap.Get());
-            pBasicEffect->SetMaterial(part.material);
-        }
-
-        effect->Apply(deviceContext);
-
-        deviceContext->DrawIndexedInstanced(part.indexCount, numInsts, 0, 0, 0);
+    case DepthStencilBitsFlag::Depth_16Bits: return DXGI_FORMAT_R16_FLOAT;
+    case DepthStencilBitsFlag::Depth_24Bits_Stencil_8Bits: return DXGI_FORMAT_R24_UNORM_X8_TYPELESS;
+    case DepthStencilBitsFlag::Depth_32Bits: return DXGI_FORMAT_R32_FLOAT;
+    case DepthStencilBitsFlag::Depth_32Bits_Stencil_8Bits_Unused_24Bits: return DXGI_FORMAT_R32_FLOAT_X8X24_TYPELESS;
+    default: return DXGI_FORMAT_UNKNOWN;
     }
 }
 
+static DXGI_FORMAT GetDepthDSVFormat(DepthStencilBitsFlag flag)
+{
+    switch (flag)
+    {
+    case DepthStencilBitsFlag::Depth_16Bits: return DXGI_FORMAT_D16_UNORM;
+    case DepthStencilBitsFlag::Depth_24Bits_Stencil_8Bits: return DXGI_FORMAT_D24_UNORM_S8_UINT;
+    case DepthStencilBitsFlag::Depth_32Bits: return DXGI_FORMAT_D32_FLOAT;
+    case DepthStencilBitsFlag::Depth_32Bits_Stencil_8Bits_Unused_24Bits: return DXGI_FORMAT_D32_FLOAT_S8X24_UINT;
+    default: return DXGI_FORMAT_UNKNOWN;
+    }
+}
 ```
 
 ## 构建阴影贴图与更新
@@ -659,8 +469,7 @@ void GameObject::DrawInstanced(ID3D11DeviceContext* deviceContext, IEffect * eff
 首先我们要在`GameApp::InitResource`中创建一副2048x2048的阴影贴图：
 
 ```cpp
-m_pShadowMap = std::make_unique<TextureRender>();
-HR(m_pShadowMap->InitResource(m_pd3dDevice.Get(), 2048, 2048, true));
+m_pShadowMapTexture = std::make_unique<Depth2D>(m_pd3dDevice.Get(), 2048, 2048);
 ```
 
 在本Demo中，光照方向每帧都在变动，我们希望让投影立方体与光照所属的变换轴对齐，并且中心能够坐落在原点。因此在`GameApp::UpdateScene`可以这么做：
@@ -684,116 +493,173 @@ m_pBasicEffect->SetShadowTransformMatrix(LightView * XMMatrixOrthographicLH(40.0
 
 ## 绘制过程
 
+首先是场景绘制的函数，考虑到有带法线和不带法线的物体，在画完法线物体后可能需要切换绘制状态：
+
+```cpp
+template<class Effect>
+void DrawScene(Effect& effect, std::function<void(Effect&, ID3D11DeviceContext*)> func = [](Effect&, ID3D11DeviceContext*) {})
+{
+    // 这些物体有法线贴图
+    {
+        // 地面       
+        m_Ground.Draw(m_pd3dImmediateContext.Get(), effect);
+
+        // 石柱
+        for (auto& cylinder : m_Cylinders)
+            cylinder.Draw(m_pd3dImmediateContext.Get(), effect);
+    }
+
+    // 没有法线贴图的物体调用普通绘制
+    func(effect, m_pd3dImmediateContext.Get());
+    // 石球
+    for (auto& sphere : m_Spheres)
+        sphere.Draw(m_pd3dImmediateContext.Get(), effect);
+
+    // 房屋
+    m_House.Draw(m_pd3dImmediateContext.Get(), effect);
+}
+```
+
+
+
 在最终的绘制过程如下：
 
 ```cpp
 void GameApp::DrawScene()
 {
-    assert(m_pd3dImmediateContext);
-    assert(m_pSwapChain);
-
-    m_pd3dImmediateContext->ClearRenderTargetView(m_pRenderTargetView.Get(), reinterpret_cast<const float*>(&Colors::Silver));
-    m_pd3dImmediateContext->ClearDepthStencilView(m_pDepthStencilView.Get(), D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
+    // ...
     
-    // ******************
-    // 绘制到阴影贴图
-    //
-    m_pShadowMap->Begin(m_pd3dImmediateContext.Get(), nullptr);
-    {
-        DrawScene(m_pShadowEffect.get());
-    }
-    m_pShadowMap->End(m_pd3dImmediateContext.Get());
-
-    // ******************
-    // 正常绘制场景
-    //
-    m_pBasicEffect->SetTextureShadowMap(m_pShadowMap->GetOutputTexture());
-    DrawScene(m_pBasicEffect.get(), m_EnableNormalMap);
-
-    // 绘制天空盒
-    m_pDesert->Draw(m_pd3dImmediateContext.Get(), *m_pSkyEffect, *m_pCamera);
-
-    // 解除深度缓冲区绑定
-    m_pBasicEffect->SetTextureShadowMap(nullptr);
-    m_pBasicEffect->Apply(m_pd3dImmediateContext.Get());
-
-    // ******************
-    // 调试绘制阴影贴图
-    //
-    if (m_EnableDebug)
-    {
-        if (m_GrayMode)
-        {
-            m_pDebugEffect->SetRenderOneComponentGray(m_pd3dImmediateContext.Get(), 0);
-        }
-        else
-        {
-            m_pDebugEffect->SetRenderOneComponent(m_pd3dImmediateContext.Get(), 0);
-        }
-        
-        m_DebugQuad.Draw(m_pd3dImmediateContext.Get(), m_pDebugEffect.get());
-        // 解除绑定
-        m_pDebugEffect->SetTextureDiffuse(nullptr);
-        m_pDebugEffect->Apply(m_pd3dImmediateContext.Get());
-    }
-
-    // Direct2D 部分...
-
-    HR(m_pSwapChain->Present(0, 0));
+    RenderShadow();
+    RenderForward();
+    RenderSkybox();
+    
+    // ...
 }
 
-void GameApp::DrawScene(BasicEffect* pBasicEffect, bool enableNormalMap)
+void GameApp::RenderShadow()
 {
-    // 地面和石柱
-    if (enableNormalMap)
-    {
-        pBasicEffect->SetRenderWithNormalMap(m_pd3dImmediateContext.Get(), IEffect::RenderObject);
-        m_GroundT.Draw(m_pd3dImmediateContext.Get(), pBasicEffect);
+    CD3D11_VIEWPORT shadowViewport(0.0f, 0.0f, (float)m_pShadowMapTexture->GetWidth(), (float)m_pShadowMapTexture->GetHeight());
+    m_pd3dImmediateContext->ClearDepthStencilView(m_pShadowMapTexture->GetDepthStencil(), D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
+    m_pd3dImmediateContext->OMSetRenderTargets(0, nullptr, m_pShadowMapTexture->GetDepthStencil());
+    m_pd3dImmediateContext->RSSetViewports(1, &shadowViewport);
 
-        pBasicEffect->SetRenderWithNormalMap(m_pd3dImmediateContext.Get(), IEffect::RenderInstance);
-        m_CylinderT.DrawInstanced(m_pd3dImmediateContext.Get(), pBasicEffect, m_CylinderTransforms);
+
+    m_ShadowEffect.SetRenderDepthOnly();
+    DrawScene<ShadowEffect>(m_ShadowEffect);
+}
+void GameApp::RenderForward()
+{
+    float black[4] = { 0.0f, 0.0f, 0.0f, 1.0f };
+    ID3D11RenderTargetView* pRTVs[]{ m_pLitTexture->GetRenderTarget() };
+    m_pd3dImmediateContext->ClearRenderTargetView(pRTVs[0], black);
+    m_pd3dImmediateContext->ClearDepthStencilView(m_pDepthTexture->GetDepthStencil(), D3D11_CLEAR_DEPTH | D3D11_CLEAR_STENCIL, 1.0f, 0);
+    m_pd3dImmediateContext->OMSetRenderTargets(1, pRTVs, m_pDepthTexture->GetDepthStencil());
+    D3D11_VIEWPORT vp = m_pCamera->GetViewPort();
+    m_pd3dImmediateContext->RSSetViewports(1, &vp);
+
+    m_BasicEffect.SetTextureShadowMap(m_pShadowMapTexture->GetShaderResource());
+
+    if (m_EnableNormalMap)
+        m_BasicEffect.SetRenderWithNormalMap();
+    else
+        m_BasicEffect.SetRenderDefault();
+    
+    DrawScene<BasicEffect>(m_BasicEffect, [](BasicEffect& effect, ID3D11DeviceContext* deviceContext) {
+        effect.SetRenderDefault();
+        });
+
+
+    m_BasicEffect.SetTextureShadowMap(nullptr);
+    m_BasicEffect.Apply(m_pd3dImmediateContext.Get());
+}
+void GameApp::RenderSkybox()
+{
+    D3D11_VIEWPORT skyboxViewport = m_pCamera->GetViewPort();
+    skyboxViewport.MinDepth = 1.0f;
+    skyboxViewport.MaxDepth = 1.0f;
+    m_pd3dImmediateContext->RSSetViewports(1, &skyboxViewport);
+
+    m_SkyboxEffect.SetRenderDefault();
+    m_SkyboxEffect.SetDepthTexture(m_pDepthTexture->GetShaderResource());
+    m_SkyboxEffect.SetLitTexture(m_pLitTexture->GetShaderResource());
+    
+    // 由于全屏绘制，不需要用到深度缓冲区，也就不需要清空后备缓冲区了
+    ID3D11RenderTargetView* pRTVs[] = { GetBackBufferRTV() };
+    m_pd3dImmediateContext->OMSetRenderTargets(1, pRTVs, nullptr);
+    m_Skybox.Draw(m_pd3dImmediateContext.Get(), m_SkyboxEffect);
+
+    // 解除绑定
+    m_pd3dImmediateContext->OMSetRenderTargets(0, nullptr, nullptr);
+    m_SkyboxEffect.SetDepthTexture(nullptr);
+    m_SkyboxEffect.SetLitTexture(nullptr);
+    m_SkyboxEffect.Apply(m_pd3dImmediateContext.Get());
+}
+```
+
+# SkyboxEffect的变化
+
+这里只讲shader的变化。现在是将场景渲染和对应的深度缓冲区作为纹理，并结合天空盒纹理输入。若深度值为1.0f，则采样天空盒；否则取出场景渲染的像素。因此不需要绑定深度缓冲区。
+
+```cpp
+uniform matrix g_ViewProj;
+
+struct VertexPosNormalTex
+{
+    float3 posL : POSITION;
+    float3 normalL : NORMAL;
+    float2 texCoord : TEXCOORD;
+};
+
+//--------------------------------------------------------------------------------------
+// 后处理, 天空盒等
+// 使用天空盒几何体渲染
+//--------------------------------------------------------------------------------------
+TextureCube<float4> g_SkyboxTexture : register(t5);
+Texture2D<float> g_DepthTexture : register(t6);
+// 常规场景渲染的纹理
+Texture2D<float4> g_LitTexture : register(t7);
+
+struct SkyboxVSOut
+{
+    float4 posViewport : SV_Position;
+    float3 skyboxCoord : skyboxCoord;
+};
+
+SkyboxVSOut SkyboxVS(VertexPosNormalTex input)
+{
+    SkyboxVSOut output;
+    
+    // 注意：不要移动天空盒并确保深度值为1(避免裁剪)
+    output.posViewport = mul(float4(input.posL, 0.0f), g_ViewProj).xyww;
+    output.skyboxCoord = input.posL;
+    
+    return output;
+}
+
+SamplerState g_SamplerDiffuse : register(s0);
+
+float4 SkyboxPS(SkyboxVSOut input) : SV_Target
+{
+    uint2 coords = input.posViewport.xy;
+
+    float3 lit = float3(0.0f, 0.0f, 0.0f);
+    float depth = g_DepthTexture[coords];
+    if (depth >= 1.0f)
+    {
+        lit += g_SkyboxTexture.Sample(g_SamplerDiffuse, input.skyboxCoord).rgb;
     }
     else
     {
-        pBasicEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderObject);
-        m_Ground.Draw(m_pd3dImmediateContext.Get(), pBasicEffect);
-
-        pBasicEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderInstance);
-        m_Cylinder.DrawInstanced(m_pd3dImmediateContext.Get(), pBasicEffect, m_CylinderTransforms);
+        lit += g_LitTexture[coords].rgb;
     }
-
-    // 石球
-    pBasicEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderInstance);
-    m_Sphere.DrawInstanced(m_pd3dImmediateContext.Get(), pBasicEffect, m_SphereTransforms);
-
-    // 房屋
-    pBasicEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderObject);
-    m_House.Draw(m_pd3dImmediateContext.Get(), pBasicEffect);
-}
-
-void GameApp::DrawScene(ShadowEffect* pShadowEffect)
-{
-    // 地面
-    pShadowEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderObject);
-    m_Ground.Draw(m_pd3dImmediateContext.Get(), pShadowEffect);
-
-    // 石柱
-    pShadowEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderInstance);
-    m_Cylinder.DrawInstanced(m_pd3dImmediateContext.Get(), pShadowEffect, m_CylinderTransforms);
-
-    // 石球
-    pShadowEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderInstance);
-    m_Sphere.DrawInstanced(m_pd3dImmediateContext.Get(), pShadowEffect, m_SphereTransforms);
-
-    // 房屋
-    pShadowEffect->SetRenderDefault(m_pd3dImmediateContext.Get(), IEffect::RenderObject);
-    m_House.Draw(m_pd3dImmediateContext.Get(), pShadowEffect);
+    
+    return float4(lit, 1.0f);
 }
 ```
 
 # 演示
 
-本Demo提供了5种斜率下的方向光，对应主键盘数字键1-5，Q键开关法线贴图，E键开关阴影贴图的显示，G键切换阴影贴图的显示模式。
+本Demo提供了5种斜率下的方向光，以及深度偏移的挑战，并且可以调试深度图、暂停/继续灯光运动
 
 ![](..\assets\31\15.gif)
 
@@ -818,7 +684,7 @@ struct VertexPosHTex
 // 这仅仅用于Alpha几何裁剪，以保证阴影的显示正确。
 // 对于不需要进行纹理采样操作的几何体可以直接将像素
 // 着色器设为nullptr
-void PS(VertexPosHTex pIn)
+void ShadowPS(VertexPosHTex pIn)
 {
     float4 diffuse = g_DiffuseMap.Sample(g_Sam, pIn.Tex);
     
@@ -837,7 +703,7 @@ void PS(VertexPosHTex pIn)
 
 1. 尝试4096x4096、1024x1024、512x512、256x256这几种不同分辨率的阴影贴图
 2. 尝试以单次点采样阴影检测来修改本演示程序（即不采用PCF）。我们将欣赏到硬阴影与锯齿状的阴影边缘
-3. 关闭斜率缩放偏移来观察阴影粉刺
-4. 将斜率缩放偏移值放大10倍，观察peter panning失真的效果
+4. 将斜率缩放偏移值放的更大一些（超出可调范围），观察peter panning失真的效果
 5. 实现单点光源下的阴影（必要时可以考虑像CubeMap那样使用6个正方形贴图）
 6. **修改项目代码，把绘制房屋改成绘制上图中的树（模型已给出），要求阴影显示正确**
+
