--- a/docs/part3/34.md
+++ b/docs/part3/34.md
@@ -1,5 +1,7 @@
 # 前言
 
+> **注意：这一章对应项目代码2.x.x版本，持有低版本项目代码的同学请到Github更新一份**
+
 在前面的章节中，我们学到了法线贴图和曲面细分。现在我们可以将这两者进行结合以改善效果，因为法线贴图仅仅只是改善了光照的细节，但它并没有从根本上改善几何体的细节。从某种意义上来说，法线贴图只是一个光照的小把戏。接下来我们将会学习如何使用位移贴图来改善网格细节。
 
 在此之前你需要了解如下章节：
@@ -27,7 +29,7 @@ $$
 
 ![](..\assets\34\01.png)![](..\assets\34\02.png)
 
-生成高度图是一项艺术性的工作，纹理艺术家可以绘制它们，或者使用工具来产生（例如：[crazybump](https://www.crazybump.com)）
+生成高度图是一项艺术性的工作，纹理艺术家可以绘制它们，或者使用工具来产生
 
 # 位移贴图的着色器代码
 
@@ -65,66 +67,46 @@ cbuffer CBChangesEveryFrame
 使用这些变量，我们就可以创建一个关于距离的线性函数来决定如何根据距离来确定镶嵌的份数。
 
 ```hlsl
-// DisplacementMapObject_VS.hlsl
-#include "Basic.hlsli"
+struct TessVertexInput
+{
+    float3 posL : POSITION;
+    float3 normalL : NORMAL;
+    float4 tangentL : TANGENT;
+    float2 tex : TEXCOORD;
+};
 
-// 顶点着色器
-TessVertexOut VS(VertexPosNormalTangentTex vIn)
+struct TessVertexOut
+{
+    float3 posW : POSITION;
+    float3 normalW : NORMAL;
+    float4 tangentW : TANGENT;
+    float2 tex : TEXCOORD0;
+    float  tessFactor : TESS;
+};
+
+TessVertexOut TessVS(TessVertexInput vIn)
 {
     TessVertexOut vOut;
 
-    vOut.PosW = mul(float4(vIn.PosL, 1.0f), g_World).xyz;
-    vOut.NormalW = mul(vIn.NormalL, (float3x3) g_WorldInvTranspose);
-    vOut.TangentW = mul(vIn.TangentL, g_World);
-    vOut.Tex = vIn.Tex;
+    vOut.posW = mul(float4(vIn.posL, 1.0f), g_World).xyz;
+    vOut.normalW = mul(vIn.normalL, (float3x3) g_WorldInvTranspose);
+    vOut.tangentW = float4(mul(vIn.tangentL.xyz, (float3x3) g_World), vIn.tangentL.w);
+    vOut.tex = vIn.tex;
     
-    float d = distance(vOut.PosW, g_EyePosW);
+    float d = distance(vOut.posW, g_EyePosW);
     
     // 标准化曲面细分因子
-    // TessFactor = 
+    // tessFactor = 
     //   0, d >= g_MinTessDistance
     //   (g_MinTessDistance - d) / (g_MinTessDistance - g_MaxTessDistance), g_MinTessDistance <= d <= g_MaxTessDistance
     //   1, d <= g_MaxTessDistance
     float tess = saturate((g_MinTessDistance - d) / (g_MinTessDistance - g_MaxTessDistance));
     
     // [0, 1] --> [g_MinTessFactor, g_MaxTessFactor]
-    vOut.TessFactor = g_MinTessFactor + tess * (g_MaxTessFactor - g_MinTessFactor);
+    vOut.tessFactor = g_MinTessFactor + tess * (g_MaxTessFactor - g_MinTessFactor);
     
     return vOut;
 }
-
-```
-
-```hlsl
-// DisplacementMapInstance_VS.hlsl
-#include "Basic.hlsli"
-
-// 顶点着色器
-TessVertexOut VS(InstancePosNormalTangentTex vIn)
-{
-    TessVertexOut vOut;
-    
-    vOut.PosW = mul(float4(vIn.PosL, 1.0f), vIn.World).xyz;
-    vOut.NormalW = mul(vIn.NormalL, (float3x3) vIn.WorldInvTranspose);
-    vOut.TangentW = mul(vIn.TangentL, vIn.World);
-    vOut.Tex = vIn.Tex;
-    
-    float d = distance(vOut.PosW, g_EyePosW);
-    
-    // 标准化曲面细分因子
-    // TessFactor = 
-    //   0, d >= g_MinTessDistance
-    //   (g_MinTessDistance - d) / (g_MinTessDistance - g_MaxTessDistance), g_MinTessDistance <= d <= g_MaxTessDistance
-    //   1, d <= g_MaxTessDistance
-    float tess = saturate((g_MinTessDistance - d) / (g_MinTessDistance - g_MaxTessDistance));
-    
-    // [0, 1] --> [g_MinTessFactor, g_MaxTessFactor]
-    vOut.TessFactor = g_MinTessFactor + tess * (g_MaxTessFactor - g_MinTessFactor);
-    
-    return vOut;
-}
-
-
 ```
 
 ## 外壳着色器
@@ -165,21 +147,20 @@ PatchTess PatchHS(InputPatch<TessVertexOut, 3> patch,
 [outputtopology("triangle_cw")]
 [outputcontrolpoints(3)]
 [patchconstantfunc("PatchHS")]
-HullOut HS(InputPatch<TessVertexOut, 3> patch,
+HullOut TessHS(InputPatch<TessVertexOut, 3> patch,
     uint i : SV_OutputControlPointID,
     uint patchId : SV_PrimitiveID)
 {
     HullOut hOut;
-	
-	// 直传
-    hOut.PosW = patch[i].PosW;
-    hOut.NormalW = patch[i].NormalW;
-    hOut.TangentW = patch[i].TangentW;
-    hOut.Tex = patch[i].Tex;
-	
+    
+    // 直传
+    hOut.posW = patch[i].posW;
+    hOut.normalW = patch[i].normalW;
+    hOut.tangentW = patch[i].tangentW;
+    hOut.tex = patch[i].tex;
+    
     return hOut;
 }
-
 ```
 
 ## 域着色器
@@ -187,24 +168,22 @@ HullOut HS(InputPatch<TessVertexOut, 3> patch,
 经过镶嵌器创建出来的每个顶点都会有调用一次域着色器。在这里我们将会对高度图（即法线贴图的Alpha通道部分）进行采样，然后利用法向量对顶点偏移，从而完成整个位移映射的过程。
 
 ```hlsl
-// DisplacementMap_DS.hlsl
-#include "Basic.hlsli"
-
+// 域着色器
 [domain("tri")]
-VertexOutNormalMap DS(PatchTess patchTess,
+DomainOutput TessDS(PatchTess patchTess,
              float3 bary : SV_DomainLocation,
              const OutputPatch<HullOut, 3> tri)
 {
-    VertexOutNormalMap dOut;
+    DomainOutput dOut;
     
     // 对面片属性进行插值以生成顶点
-    dOut.PosW     = bary.x * tri[0].PosW     + bary.y * tri[1].PosW     + bary.z * tri[2].PosW;
-    dOut.NormalW  = bary.x * tri[0].NormalW  + bary.y * tri[1].NormalW  + bary.z * tri[2].NormalW;
-    dOut.TangentW = bary.x * tri[0].TangentW + bary.y * tri[1].TangentW + bary.z * tri[2].TangentW;
-    dOut.Tex      = bary.x * tri[0].Tex      + bary.y * tri[1].Tex      + bary.z * tri[2].Tex;
+    dOut.posW     = bary.x * tri[0].posW     + bary.y * tri[1].posW     + bary.z * tri[2].posW;
+    dOut.normalW  = bary.x * tri[0].normalW  + bary.y * tri[1].normalW  + bary.z * tri[2].normalW;
+    dOut.tangentW = bary.x * tri[0].tangentW + bary.y * tri[1].tangentW + bary.z * tri[2].tangentW;
+    dOut.tex      = bary.x * tri[0].tex      + bary.y * tri[1].tex      + bary.z * tri[2].tex;
     
-    // 对插值后的法向量进行标准化
-    dOut.NormalW = normalize(dOut.NormalW);
+    // 对插值后的法向量和切线进行标准化
+    dOut.normalW = normalize(dOut.normalW);
     
     //
     // 位移映射
@@ -213,31 +192,30 @@ VertexOutNormalMap DS(PatchTess patchTess,
     // 基于摄像机到顶点的距离选取mipmap等级；特别地，对每个MipInterval单位选择下一个mipLevel
     // 然后将mipLevel限制在[0, 6]
     const float MipInterval = 20.0f;
-    float mipLevel = clamp((distance(dOut.PosW, g_EyePosW) - MipInterval) / MipInterval, 0.0f, 6.0f);
+    float mipLevel = clamp((distance(dOut.posW, g_EyePosW) - MipInterval) / MipInterval, 0.0f, 6.0f);
     
     // 对高度图采样（存在法线贴图的alpha通道）
-    float h = g_NormalMap.SampleLevel(g_Sam, dOut.Tex, mipLevel).a;
+    float h = g_NormalMap.SampleLevel(g_Sam, dOut.tex, mipLevel).a;
     
     // 沿着法向量进行偏移
-    dOut.PosW += (g_HeightScale * (h - 1.0f)) * dOut.NormalW;
+    dOut.posW += (g_HeightScale * (h - 1.0f)) * dOut.normalW;
     
     // 生成投影纹理坐标
-    dOut.ShadowPosH = mul(float4(dOut.PosW, 1.0f), g_ShadowTransform);
+    dOut.ShadowPosH = mul(float4(dOut.posW, 1.0f), g_ShadowTransform);
     
     // 投影到齐次裁减空间
-    dOut.PosH = mul(float4(dOut.PosW, 1.0f), g_ViewProj);
+    dOut.posH = mul(float4(dOut.posW, 1.0f), g_ViewProj);
     
     // 从NDC坐标[-1, 1]^2变换到纹理空间坐标[0, 1]^2
     // u = 0.5x + 0.5
     // v = -0.5y + 0.5
-    // ((xw, yw, zw, w) + (w, w, 0, 0)) * (0.5, -0.5, 1, 1) = ((0.5x + 0.5)w, (-0.5y + 0.5)w, zw, w)
+    // ((xw, yw, zw, w) + (w, -w, 0, 0)) * (0.5, -0.5, 1, 1) = ((0.5x + 0.5)w, (-0.5y + 0.5)w, zw, w)
     //                                                      = (uw, vw, zw, w)
     //                                                      =>  (u, v, z, 1)
-    dOut.SSAOPosH = (dOut.PosH + float4(dOut.PosH.ww, 0.0f, 0.0f)) * float4(0.5f, -0.5f, 1.0f, 1.0f);
+    dOut.SSAOPosH = (dOut.posH + float4(dOut.posH.w, -dOut.posH.w, 0.0f, 0.0f)) * float4(0.5f, -0.5f, 1.0f, 1.0f);
     
     return dOut;
 }
-
 ```
 
 这里值得注意的是，我们需要在域着色器中自行选择mipmap等级。像素着色器中的方法`Texture2D::Sample`在域着色器中是不能使用的，所以我们必须使用`Texture2D::SampleLevel`方法并手工指定mipmap等级。
@@ -246,31 +224,20 @@ VertexOutNormalMap DS(PatchTess patchTess,
 
 ![](..\assets\34\04.png)
 
-所以接下来做的事情就是体力活了，把DisplacementMap从顶点着色器到域着色器的实现原理也要搬运到绘制阴影图的过程，以及在SSAO绘制法向量/深度缓冲区顺便写入深度/模板缓冲区的过程中。因为代码上高度相似，这里我就只是列出本章新增的着色器文件列表：
-
-| BasicEffect                  | SSAOEffect                         | ShadowEffect            |
-| ---------------------------- | ---------------------------------- | ----------------------- |
-| `DisplacementMapObject_VS`   | `SSAO_NormalDepth_ObjectTess_VS`   | `ShadowObjectTess_VS`   |
-| `DisplacementMapInstance_VS` | `SSAO_NormalDepth_InstanceTess_VS` | `ShadowInstanceTess_VS` |
-| `DisplacementMap_HS`         | `SSAO_NormalDepth_HS`              | `Shadow_DS`             |
-| `DisplacementMap_DS`         | `SSAO_NormalDepth_DS`              | `Shadow_HS`             |
-
 # C++端代码实现
 
-在本章中，与位移映射直接相关的类有`BasicEffect`、`SSAOEffect`、`ShadowEffect`类，都是在前面的基础上作的修改。然后`GameObject`的`Draw`也为此有所修改。`GameApp`类承担了实现过程，和SSAO的相比绘制框架的变动比较小。这里就不放出修改的部分了，读者可以自行浏览。
+在本章中，与位移贴图直接相关的类有`BasicEffect`、`SSAOEffect`、`ShadowEffect`类，都是在前面的基础上作的修改。然后`GameObject`的`Draw`也为此有所修改。`GameApp`类承担了实现过程，和SSAO的相比绘制框架的变动比较小。这里就不放出修改的部分了，读者可以自行浏览。
 
 ## 网格细节问题
 
-首先要注意的是，我们是对顶点进行位移映射。如果网格的三角形比较大，比如说只有4个顶点的地板，经过曲面细分后能生成的新顶点也比较有限，位移映射的效果就不明显。为此，我们需要增大网格模型的顶点密集程度，意味着我们增大了高度图的采样点数目，以让我们能够逼近真实的地形。如果我们不走曲面细分，那我们就需要提前准备三角形密集的网格数据，这样需要占用比较多的显存或内存。但即便是用了曲面细分，我们要权衡初始网格的顶点密集程度，以及经过曲面细分后的顶点密集程度如何。
+首先要注意的是，我们是对顶点进行位移。如果网格的三角形比较大，比如说只有4个顶点的地板，经过曲面细分后能生成的新顶点也比较有限，位移的效果就不明显。为此，我们需要增大网格模型的顶点密集程度，意味着我们增大了高度图的采样点数目，以让我们能够逼近真实的地形。如果我们不走曲面细分，那我们就需要提前准备三角形密集的网格数据，这样需要占用比较多的显存或内存。但即便是用了曲面细分，我们要权衡初始网格的顶点密集程度，以及经过曲面细分后的顶点密集程度如何。
 
-在本章的示例中，我们的地面不再使用`Geometry::CreatePlain`，而是用`Geometry::CreateTerrain`来创建出更加精细的地面网格。由于一开始写的`Geometry::CreateCylinder`它的侧面三角形比较大，曲面细分后的顶点数目也不够密集，为此我已经修改了它的实现，让侧面能够支持分层的三角形。
+在本章的示例中，我们的地面不再使用`Geometry::CreatePlane`，而是用`Geometry::Geometry::CreateGrid`来创建出更加精细的地面网格。由于一开始写的`Geometry::CreateCylinder`它的侧面三角形比较大，曲面细分后的顶点数目也不够密集，为此我已经修改了它的实现，让侧面能够支持分层的三角形。
 
 # 演示
 
-下面的动图展示了基础绘制、法线贴图绘制、位移贴图绘制下的区别，以及曲面细分前后网格的区别。
+下面的图展示了使用法线/位移贴图绘制的效果。
 
-![](..\assets\34\05.gif)
+![](..\assets\34\05.png)
 
-而下面的动图则展示了不同的HeightScale下位移映射的效果。
-
-![](..\assets\34\06.gif)
+![](..\assets\34\06.png)
