--- a/docs/part3/30.md
+++ b/docs/part3/30.md
@@ -1,5 +1,7 @@
 # 前言
 
+>  **注意：这一章对应项目代码2.x.x版本，持有低版本项目代码的同学请到Github更新一份**
+
 到这里计算着色器的主线学习基本结束，剩下的就是再补充两个有关图像处理方面的应用。这里面包含了龙书11的图像模糊，以及龙书12额外提到的Sobel算子进行边缘检测。主要内容源自于龙书12，项目源码也基于此进行调整。
 
 **学习目标：**
@@ -108,71 +110,90 @@ $$
 
 现在来考虑对一个28x14像素的纹理进行处理，我们所用的横向、纵向线程组的规模分别为8x1和1x8（采用X×Y的表示格式）。对于水平方向的处理过程来说，为了处理所有的像素，我们需要在x方向上调度$ceil(\frac{w}{8})=ceil(\frac{28}{8})=4$个线程组，并在y方向上调度14个线程组。由于28并不能被8整除，所以最右侧的线程组中会有$(4\times 8-28)\times 14=56$个线程声明都不做。对于垂直方向的处理过程而言，为了处理所有的像素，我们需要在y方向上分派$ceil(\frac{h}{8})=ceil(\frac{14}{8})=2$个线程组，并在x方向上调度28个线程组。同理，由于14并不能被8整除，所以最下侧的线程组中会有$(2\times 8 - 14)\times 28$个闲置的线程。沿用同一思路就可以将线程组扩展为256个线程的规模来处理更大的纹理。
 
-`BlurFilter::Execute`不仅计算出了每个方向要调度的线程组数量，还开启了计算着色器的模糊运算：
+在`EffectPass::Dispatch`中，由于通过着色器反射获取了线程组的维度信息，我们可以直接传入图片宽高进行内部处理：
 
 ```cpp
-void BlurFilter::Execute(ID3D11DeviceContext* deviceContext, ID3D11ShaderResourceView* inputTex, ID3D11UnorderedAccessView* outputTex, UINT blurTimes)
+void EffectPass::Dispatch(ID3D11DeviceContext* deviceContext, uint32_t threadX, uint32_t threadY, uint32_t threadZ)
 {
-	if (!deviceContext || !inputTex || !blurTimes)
-		return;
+    if (!pCSInfo)
+    {
+#ifdef _DEBUG
+        OutputDebugStringA("[Warning]: No compute shader in current effect pass!");
+#endif
+        return;
+    }
 
-	// 设置常量缓冲区
-	D3D11_MAPPED_SUBRESOURCE mappedData;
-	deviceContext->Map(m_pConstantBuffer.Get(), 0, D3D11_MAP_WRITE_DISCARD, 0, &mappedData);
-	memcpy_s(mappedData.pData, sizeof m_CBSettings, &m_CBSettings, sizeof m_CBSettings);
-	deviceContext->Unmap(m_pConstantBuffer.Get(), 0);
+    uint32_t threadGroupCountX = (threadX + pCSInfo->threadGroupSizeX - 1) / pCSInfo->threadGroupSizeX;
+    uint32_t threadGroupCountY = (threadY + pCSInfo->threadGroupSizeY - 1) / pCSInfo->threadGroupSizeY;
+    uint32_t threadGroupCountZ = (threadZ + pCSInfo->threadGroupSizeZ - 1) / pCSInfo->threadGroupSizeZ;
 
-	deviceContext->CSSetConstantBuffers(0, 1, m_pConstantBuffer.GetAddressOf());
-
-	ID3D11UnorderedAccessView* nullUAV[1] = { nullptr };
-	ID3D11ShaderResourceView* nullSRV[1] = { nullptr };
-	// 第一次模糊
-	// 横向模糊
-	deviceContext->CSSetShader(m_pBlurHorzCS.Get(), nullptr, 0);
-	deviceContext->CSSetShaderResources(0, 1, &inputTex);
-	deviceContext->CSSetUnorderedAccessViews(0, 1, m_pTempUAV0.GetAddressOf(), nullptr);
-
-	deviceContext->Dispatch((UINT)ceilf(m_Width / 256.0f), m_Height, 1);
-	deviceContext->CSSetUnorderedAccessViews(0, 1, nullUAV, nullptr);
-	// 纵向模糊
-	deviceContext->CSSetShader(m_pBlurVertCS.Get(), nullptr, 0);
-	deviceContext->CSSetShaderResources(0, 1, m_pTempSRV0.GetAddressOf());
-	if (blurTimes == 1 && outputTex)
-		deviceContext->CSSetUnorderedAccessViews(0, 1, &outputTex, nullptr);
-	else
-		deviceContext->CSSetUnorderedAccessViews(0, 1, m_pTempUAV1.GetAddressOf(), nullptr);
-	deviceContext->Dispatch(m_Width, (UINT)ceilf(m_Height / 256.0f), 1);
-	deviceContext->CSSetUnorderedAccessViews(0, 1, nullUAV, nullptr);
-
-	// 剩余模糊次数
-	while (--blurTimes)
-	{
-		// 横向模糊
-		deviceContext->CSSetShader(m_pBlurHorzCS.Get(), nullptr, 0);
-		deviceContext->CSSetShaderResources(0, 1, m_pTempSRV1.GetAddressOf());
-		deviceContext->CSSetUnorderedAccessViews(0, 1, m_pTempUAV0.GetAddressOf(), nullptr);
-
-		deviceContext->Dispatch((UINT)ceilf(m_Width / 256.0f), m_Height, 1);
-		deviceContext->CSSetUnorderedAccessViews(0, 1, nullUAV, nullptr);
-		// 纵向模糊
-		deviceContext->CSSetShader(m_pBlurVertCS.Get(), nullptr, 0);
-		deviceContext->CSSetShaderResources(0, 1, m_pTempSRV0.GetAddressOf());
-		if (blurTimes == 1 && outputTex)
-			deviceContext->CSSetUnorderedAccessViews(0, 1, &outputTex, nullptr);
-		else
-			deviceContext->CSSetUnorderedAccessViews(0, 1, m_pTempUAV1.GetAddressOf(), nullptr);
-		deviceContext->Dispatch(m_Width, (UINT)ceilf(m_Height / 256.0f), 1);
-
-		
-		deviceContext->CSSetUnorderedAccessViews(0, 1, nullUAV, nullptr);
-	}
-	// 解除剩余绑定
-	deviceContext->CSSetShaderResources(0, 1, nullSRV);
-
+    deviceContext->Dispatch(threadGroupCountX, threadGroupCountY, threadGroupCountZ);
 }
 ```
 
-其余C++端源码则直接去项目源码看即可。
+`PostProcessEffect::ComputeGaussianBlurX`和`PostProcessEffect::ComputeGaussianBlurY`的实现如下：
+
+```cpp
+void PostProcessEffect::ComputeGaussianBlurX(
+    ID3D11DeviceContext* deviceContext, 
+    ID3D11ShaderResourceView* input, 
+    ID3D11UnorderedAccessView* output, 
+    uint32_t width, uint32_t height)
+{
+    deviceContext->IASetPrimitiveTopology(D3D11_PRIMITIVE_TOPOLOGY_TRIANGLELIST);
+    auto pPass = pImpl->m_pEffectHelper->GetEffectPass("BlurHorz");
+    pImpl->m_pEffectHelper->GetConstantBufferVariable("g_Weights")->SetRaw(pImpl->m_Weights);
+    pImpl->m_pEffectHelper->GetConstantBufferVariable("g_BlurRadius")->SetSInt(pImpl->m_BlurRadius);
+    pImpl->m_pEffectHelper->SetShaderResourceByName("g_Input", input);
+    pImpl->m_pEffectHelper->SetUnorderedAccessByName("g_Output", output);
+    pPass->Apply(deviceContext);
+    pPass->Dispatch(deviceContext, width, height);
+
+    // 清空
+    input = nullptr;
+    output = nullptr;
+    deviceContext->CSSetShaderResources(pImpl->m_pEffectHelper->MapShaderResourceSlot("g_Input"), 1, &input);
+    deviceContext->CSSetUnorderedAccessViews(pImpl->m_pEffectHelper->MapUnorderedAccessSlot("g_Output"), 1, &output, nullptr);
+}
+
+void PostProcessEffect::ComputeGaussianBlurY(
+    ID3D11DeviceContext* deviceContext, 
+    ID3D11ShaderResourceView* input, 
+    ID3D11UnorderedAccessView* output,
+    uint32_t width, uint32_t height)
+{
+    deviceContext->IASetPrimitiveTopology(D3D11_PRIMITIVE_TOPOLOGY_TRIANGLELIST);
+    auto pPass = pImpl->m_pEffectHelper->GetEffectPass("BlurVert");
+    pImpl->m_pEffectHelper->GetConstantBufferVariable("g_Weights")->SetRaw(pImpl->m_Weights);
+    pImpl->m_pEffectHelper->GetConstantBufferVariable("g_BlurRadius")->SetSInt(pImpl->m_BlurRadius);
+    pImpl->m_pEffectHelper->SetShaderResourceByName("g_Input", input);
+    pImpl->m_pEffectHelper->SetUnorderedAccessByName("g_Output", output);
+    pPass->Apply(deviceContext);
+    pPass->Dispatch(deviceContext, width, height);
+
+    // 清空
+    input = nullptr;
+    output = nullptr;
+    deviceContext->CSSetShaderResources(pImpl->m_pEffectHelper->MapShaderResourceSlot("g_Input"), 1, &input);
+    deviceContext->CSSetUnorderedAccessViews(pImpl->m_pEffectHelper->MapUnorderedAccessSlot("g_Output"), 1, &output, nullptr);
+}
+```
+
+然后就可以进行多次模糊了，这里输入和输出最终都为`m_pLitTexture`：
+
+```cpp
+for (int i = 0; i < m_BlurTimes; ++i)
+{
+    m_PostProcessEffect.ComputeGaussianBlurX(m_pd3dImmediateContext.Get(), 
+                                             m_pLitTexture->GetShaderResource(), 
+                                             m_pTempTexture->GetUnorderedAccess(), 
+                                             m_ClientWidth, m_ClientHeight);
+    m_PostProcessEffect.ComputeGaussianBlurY(m_pd3dImmediateContext.Get(),
+                                             m_pTempTexture->GetShaderResource(),
+                                             m_pLitTexture->GetUnorderedAccess(),
+                                             m_ClientWidth, m_ClientHeight);
+}
+```
 
 ## HLSL代码
 
@@ -206,40 +227,30 @@ cbuffer CBSettings : register(b0)
 {
     int g_BlurRadius;
     
-    // 最多支持19个模糊权值
-    float w0;
-    float w1;
-    float w2;
-    float w3;
-    float w4;
-    float w5;
-    float w6;
-    float w7;
-    float w8;
-    float w9;
-    float w10;
-    float w11;
-    float w12;
-    float w13;
-    float w14;
-    float w15;
-    float w16;
-    float w17;
-    float w18;
+    // 最多支持15个模糊权值
+    float4 g_Weights[8];
+    // 不位于常量缓冲区
+    static float s_Weights[32] = (float[32]) g_Weights;
 }
 
 Texture2D g_Input : register(t0);
+
 RWTexture2D<float4> g_Output : register(u0);
 
-static const int g_MaxBlurRadius = 9;
+SamplerState g_SamLinearWrap : register(s0); // 线性过滤+Wrap采样器
+SamplerState g_SamPointClamp : register(s1); // 点过滤+Clamp采样器
 
+
+#define MAX_BLUR_RADIUS 7
 #define N 256
-#define CacheSize (N + 2 * g_MaxBlurRadius)
+#define CacheSize (N + 2 * MAX_BLUR_RADIUS)
+
+
 ```
 
 ```hlsl
 // Blur_Horz_CS.hlsl
-#include "Blur.hlsli"
+#include "PostProcess.hlsli"
 
 groupshared float4 g_Cache[CacheSize];
 
@@ -247,13 +258,6 @@ groupshared float4 g_Cache[CacheSize];
 void CS(int3 GTid : SV_GroupThreadID,
     int3 DTid : SV_DispatchThreadID)
 {
-    // 放在数组中以便于索引
-    float g_Weights[19] =
-    {
-        w0, w1, w2, w3, w4, w5, w6, w7, w8, w9,
-        w10, w11, w12, w13, w14, w15, w16, w17, w18
-    };
-
     // 通过填写本地线程存储区来减少带宽的负载。若要对N个像素进行模糊处理，根据模糊半径，
     // 我们需要加载N + 2 * BlurRadius个像素
     
@@ -266,17 +270,19 @@ void CS(int3 GTid : SV_GroupThreadID,
         g_Cache[GTid.x] = g_Input[int2(x, DTid.y)];
     }
     
+    uint texWidth, texHeight;
+    g_Input.GetDimensions(texWidth, texHeight);
+    
     if (GTid.x >= N - g_BlurRadius)
     {
         // 对于图像左侧边界存在越界采样的情况进行钳位(Clamp)操作
-        // 震惊的是Texture2D居然能通过属性Length访问宽高
-        int x = min(DTid.x + g_BlurRadius, g_Input.Length.x - 1);   
+        int x = min(DTid.x + g_BlurRadius, texWidth - 1);
         g_Cache[GTid.x + 2 * g_BlurRadius] = g_Input[int2(x, DTid.y)];
     }
     
     // 将数据写入Cache的对应位置
     // 针对图形边界处的越界采样情况进行钳位处理
-    g_Cache[GTid.x + g_BlurRadius] = g_Input[min(DTid.xy, g_Input.Length.xy - 1)];
+    g_Cache[GTid.x + g_BlurRadius] = g_Input[min(DTid.xy, float2(texWidth, texHeight) - 1)];
     
     // 等待所有线程完成任务
     GroupMemoryBarrierWithGroupSync();
@@ -287,11 +293,12 @@ void CS(int3 GTid : SV_GroupThreadID,
     {
         int k = GTid.x + g_BlurRadius + i;
         
-        blurColor += g_Weights[i + g_BlurRadius] * g_Cache[k];
+        blurColor += s_Weights[i + g_BlurRadius] * g_Cache[k];
     }
     
     g_Output[DTid.xy] = blurColor;
 }
+
 ```
 
 `Blur_Vert_CS.hlsl`与上面的代码类似，就不再放出。
@@ -327,14 +334,10 @@ $$
 索贝尔算子的HLSL代码实现如下：
 
 ```hlsl
-// Sobel_CS.hlsl
-Texture2D g_Input : register(t0);
-RWTexture2D<float4> g_Output : register(u0);
-
-// 将RGB色转化为灰色
+// 将线性RGB色转化为亮度
 float3 RGB2Gray(float3 color)
 {
-    return (float3) dot(color, float3(0.299f, 0.587f, 0.114f));
+    return dot(color, float3(0.212671f, 0.715160f, 0.072169f));
 }
 
 [numthreads(16, 16, 1)]
@@ -391,6 +394,24 @@ float4 PS(float4 posH : SV_Position, float2 tex : TEXCOORD) : SV_Target
 ```
 
 在C++端的代码可以直接去源码中寻找`SobelFilter`。
+
+为了将后处理后的纹理渲染跟索贝尔算子混乘到后备缓冲区，这里使用一个Composite Pass，并且支持直通渲染。顶点着色器使用全屏三角形绘制：
+
+```cpp
+float4 PS(float4 posH : SV_position, float2 texcoord : TEXCOORD) : SV_Target
+{
+    float4 c = g_Input.SampleLevel(g_SamPointClamp, texcoord, 0.0f);
+    uint texWidth, texHeight;
+    g_EdgeInput.GetDimensions(texWidth, texHeight);
+    float4 e = float4(1.0f, 1.0f, 1.0f, 1.0f);
+    if (texWidth > 0 && texHeight > 0)
+    {
+        e = g_EdgeInput.SampleLevel(g_SamPointClamp, texcoord, 0.0f);
+    }
+    // 将原始图片与边缘图相乘
+    return c * e;
+}
+```
 
 # 演示
 
